--- a/directbak.yaml
+++ b/directbak.yaml
@@ -944,7 +944,6 @@ payload:
   - '+.117play.com'
   - '+.118114.net'
   - '+.1188.com'
-  - '+.1189.tv'
   - '+.118cy.com'
   - '+.118jm.com'
   - '+.118pan.com'
@@ -1926,7 +1925,6 @@ payload:
   - '+.2018jsybh.com'
   - '+.2018zjjly.com'
   - '+.2019cdac.com'
-  - '+.2019zjj.com'
   - '+.202030.com'
   - '+.2021.com'
   - '+.2022cdnpl.com'
@@ -2492,7 +2490,6 @@ payload:
   - '+.312green.com'
   - '+.312yy.com'
   - '+.313.com'
-  - '+.3131tyc.com'
   - '+.313515.com'
   - '+.3145.com'
   - '+.314pay.com'
@@ -3011,7 +3008,6 @@ payload:
   - '+.3733.com'
   - '+.3737.com'
   - '+.3737k.com'
-  - '+.3737tyc.com'
   - '+.373best.com'
   - '+.373f.com'
   - '+.373house.com'
@@ -3440,6 +3436,7 @@ payload:
   - '+.462546.com'
   - '+.46412.com'
   - '+.46466.me'
+  - '+.465676.tv'
   - '+.4658.net'
   - '+.466.com'
   - '+.4662000.com'
@@ -4121,6 +4118,7 @@ payload:
   - '+.51xie.com'
   - '+.51xingjy.com'
   - '+.51xpj.com'
+  - '+.51xuanxiao.com'
   - '+.51xue8.com'
   - '+.51xuetang.com'
   - '+.51xuewen.com'
@@ -6298,6 +6296,7 @@ payload:
   - '+.90bola.me'
   - '+.90ckm.com'
   - '+.90e.com'
+  - '+.90hello.com'
   - '+.90ko.net'
   - '+.90lhd.com'
   - '+.90qh.com'
@@ -6409,6 +6408,7 @@ payload:
   - '+.91haoke.com'
   - '+.91huayi.com'
   - '+.91huoke.com'
+  - '+.91huola.com'
   - '+.91ios.com'
   - '+.91jbz.com'
   - '+.91jf.com'
@@ -6737,6 +6737,7 @@ payload:
   - '+.96811.com'
   - '+.96822.com'
   - '+.96845.com'
+  - '+.968550.com'
   - '+.96877.net'
   - '+.968pk.com'
   - '+.969009.com'
@@ -7061,6 +7062,7 @@ payload:
   - '+.9wuli.com'
   - '+.9xiazaiqi.com'
   - '+.9xiu.com'
+  - '+.9xiuzb.com'
   - '+.9xkd.com'
   - '+.9xu.com'
   - '+.9xwang.com'
@@ -10284,6 +10286,7 @@ payload:
   - '+.beimu.com'
   - '+.beingmate.com'
   - '+.beipy.com'
+  - '+.beiren.cc'
   - '+.beisen.com'
   - '+.beisencorp.com'
   - '+.beitaichufang.com'
@@ -10789,7 +10792,6 @@ payload:
   - '+.biqugexsw.com'
   - '+.biqugexsw8.com'
   - '+.biqugexx.com'
-  - '+.biqugg.com'
   - '+.biqugu.net'
   - '+.biquguan.com'
   - '+.biqukan.com'
@@ -11198,6 +11200,7 @@ payload:
   - '+.bkpcn.com'
   - '+.bkqq.com'
   - '+.bkweek.com'
+  - '+.bkwgf.com'
   - '+.bkxs.net'
   - '+.bkzzy.com'
   - '+.bl.com'
@@ -11658,6 +11661,7 @@ payload:
   - '+.bscstorage.net'
   - '+.bsd4fz.com'
   - '+.bsdgco.com'
+  - '+.bsdt1688.com'
   - '+.bsgcnc.com'
   - '+.bsgslb.com'
   - '+.bsh-tech.com'
@@ -13842,6 +13846,7 @@ payload:
   - '+.chinaadec.com'
   - '+.chinaaet.com'
   - '+.chinaagrisci.com'
+  - '+.chinaagv.com'
   - '+.chinaairer.com'
   - '+.chinaalex.com'
   - '+.chinaamc.com'
@@ -14504,6 +14509,7 @@ payload:
   - '+.chongwujiaoyi.com'
   - '+.chongwuxiang.com'
   - '+.chongya.com'
+  - '+.chongya.vip'
   - '+.chongyacdn.com'
   - '+.chongyejia.com'
   - '+.chongyitang.org'
@@ -14514,7 +14520,6 @@ payload:
   - '+.choujue.net'
   - '+.choukang.com'
   - '+.choupangxia.com'
-  - '+.chouqinshuwu.com'
   - '+.chouqu.com'
   - '+.chouti.cc'
   - '+.chouti.com'
@@ -14575,7 +14580,6 @@ payload:
   - '+.chuangx.org'
   - '+.chuangxin.com'
   - '+.chuangxinapi.com'
-  - '+.chuangxinbeidou.com'
   - '+.chuangxinoa.com'
   - '+.chuangye.com'
   - '+.chuangye98.com'
@@ -15399,7 +15403,6 @@ payload:
   - '+.cngb.org'
   - '+.cngba.com'
   - '+.cngbdl.com'
-  - '+.cnggt120.com'
   - '+.cngin.com'
   - '+.cngnu.net'
   - '+.cngold.org'
@@ -16247,7 +16250,6 @@ payload:
   - '+.cqkeb.com'
   - '+.cqkhg.com'
   - '+.cqkjwx.com'
-  - '+.cqklsm.com'
   - '+.cqkqinfo.com'
   - '+.cqkundian.com'
   - '+.cqkx.com'
@@ -17536,6 +17538,7 @@ payload:
   - '+.daztoutiao.com'
   - '+.dazui.com'
   - '+.db-cache.com'
+  - '+.db.ci'
   - '+.db9x.com'
   - '+.dbank.com'
   - '+.dbankcdn.com'
@@ -19340,6 +19343,7 @@ payload:
   - '+.duozhuayu.com'
   - '+.duozhuayu.net'
   - '+.dup2.org'
+  - '+.dupan.ink'
   - '+.dusays.com'
   - '+.dushewang.com'
   - '+.dushicn.com'
@@ -20162,7 +20166,6 @@ payload:
   - '+.egotops.com'
   - '+.egou.com'
   - '+.egou0515.com'
-  - '+.egouo.net'
   - '+.egouz.com'
   - '+.egovsum.com'
   - '+.egreatworld.com'
@@ -22059,7 +22062,6 @@ payload:
   - '+.fnrczp.com'
   - '+.fnscore.com'
   - '+.fnysb.com'
-  - '+.fnyy.net'
   - '+.fnzoo.com'
   - '+.fo12.com'
   - '+.fob123.com'
@@ -22611,6 +22613,7 @@ payload:
   - '+.fyrsks.com'
   - '+.fyrwzz.com'
   - '+.fysns.com'
+  - '+.fysoft3.com'
   - '+.fytcw.com'
   - '+.fytxonline.com'
   - '+.fytz.net'
@@ -23222,6 +23225,7 @@ payload:
   - '+.geizan.cc'
   - '+.gejiawen.com'
   - '+.gejiba.com'
+  - '+.gelicang.net'
   - '+.gelics.com'
   - '+.gelonghui.com'
   - '+.gelu.me'
@@ -24312,7 +24316,6 @@ payload:
   - '+.gudi.cc'
   - '+.guduodata.com'
   - '+.guestops.com'
-  - '+.gufengmh.com'
   - '+.gufengmh8.com'
   - '+.gufengmh9.com'
   - '+.guge.tw'
@@ -25094,6 +25097,7 @@ payload:
   - '+.haixiutv.com'
   - '+.haixiuvv.com'
   - '+.haixue.com'
+  - '+.haixuemeili.com'
   - '+.haixunpr.org'
   - '+.haixunw.com'
   - '+.haiyi701.com'
@@ -26253,7 +26257,6 @@ payload:
   - '+.hfrqh.com'
   - '+.hfrsggff.com'
   - '+.hfsava.com'
-  - '+.hfsem.com'
   - '+.hfsid.com'
   - '+.hfssw.com'
   - '+.hfswcz.com'
@@ -26738,6 +26741,7 @@ payload:
   - '+.hngyzx.org'
   - '+.hnh.cc'
   - '+.hnhaofang.com'
+  - '+.hnhflqgc.com'
   - '+.hnhnled.com'
   - '+.hnhxhz.com'
   - '+.hnhxin.com'
@@ -27816,6 +27820,7 @@ payload:
   - '+.huiqiangkeji.com'
   - '+.huiqudsp.com'
   - '+.huiris.com'
+  - '+.huirixiao.com'
   - '+.huishangbao.com'
   - '+.huishangol.com'
   - '+.huishenghuo888888.com'
@@ -28352,6 +28357,7 @@ payload:
   - '+.hzjunxing.com'
   - '+.hzkayo.com'
   - '+.hzkshx.com'
+  - '+.hzkuangxiangzi.com'
   - '+.hzleshun.com'
   - '+.hzljlyy.com'
   - '+.hzlug.org'
@@ -29542,6 +29548,7 @@ payload:
   - '+.imtuan.com'
   - '+.imtvs.cc'
   - '+.imudgame.com'
+  - '+.imugeda.com'
   - '+.imuke.com'
   - '+.imuo.com'
   - '+.imushan.com'
@@ -31360,6 +31367,7 @@ payload:
   - '+.jin10.com'
   - '+.jin10x.com'
   - '+.jinanguanggao.com'
+  - '+.jinanmice.com'
   - '+.jinanqianji.com'
   - '+.jinanxww.com'
   - '+.jinbaiteng.com'
@@ -31870,7 +31878,6 @@ payload:
   - '+.jjvod.tv'
   - '+.jjw.com'
   - '+.jjwli.com'
-  - '+.jjword.com'
   - '+.jjwxc.com'
   - '+.jjwxc.net'
   - '+.jjwxc.org'
@@ -32697,6 +32704,7 @@ payload:
   - '+.juzicy.com'
   - '+.juzifenqi.com'
   - '+.juzilicai.com'
+  - '+.juzimi.cc'
   - '+.juzimi.com'
   - '+.juzioo.com'
   - '+.juziseo.com'
@@ -32728,6 +32736,7 @@ payload:
   - '+.jwwey.com'
   - '+.jwyun.net'
   - '+.jx-bank.com'
+  - '+.jx-dzx.com'
   - '+.jx-nc.com'
   - '+.jx.la'
   - '+.jx09.com'
@@ -33371,7 +33380,6 @@ payload:
   - '+.kekepx.com'
   - '+.kekeshici.com'
   - '+.kekexueba.com'
-  - '+.kekiss.com'
   - '+.kekoku.com'
   - '+.kele8.com'
   - '+.kelehuyu.com'
@@ -35659,7 +35667,6 @@ payload:
   - '+.lingzhitech.com'
   - '+.lingzhtech.com'
   - '+.linhao99.com'
-  - '+.linhere.com'
   - '+.linhuiba.com'
   - '+.lining.com'
   - '+.lining0806.com'
@@ -35801,7 +35808,6 @@ payload:
   - '+.liqwei.com'
   - '+.lirenling.com'
   - '+.liriansu.com'
-  - '+.liroi.com'
   - '+.lirui.name'
   - '+.lis99.com'
   - '+.lisa33xiaoq.net'
@@ -36608,6 +36614,7 @@ payload:
   - '+.ludeqi.com'
   - '+.ludiban.com'
   - '+.ludou.org'
+  - '+.ludu319.com'
   - '+.luduzww.com'
   - '+.luedian.com'
   - '+.luexiao.com'
@@ -37018,7 +37025,6 @@ payload:
   - '+.m2mzy.com'
   - '+.m3guo.com'
   - '+.m448.com'
-  - '+.m4yy.com'
   - '+.m598.com'
   - '+.m5bn.com'
   - '+.m5stack.com'
@@ -38731,6 +38737,7 @@ payload:
   - '+.mobvoi.com'
   - '+.mocache.com'
   - '+.mocartoon.com'
+  - '+.mochai.store'
   - '+.mochouu.com'
   - '+.mockingbot.com'
   - '+.mockplus.com'
@@ -43374,6 +43381,7 @@ payload:
   - '+.qianliaowang.com'
   - '+.qianlima.com'
   - '+.qianlimafile.com'
+  - '+.qianlimazb.com'
   - '+.qianlinkj.com'
   - '+.qianlong.com'
   - '+.qianluxiaoshuo.com'
@@ -45147,6 +45155,7 @@ payload:
   - '+.rm-static.djicdn.com'
   - '+.rmb.sh'
   - '+.rmcteam.org'
+  - '+.rmejk.com'
   - '+.rmhospital.com'
   - '+.rmjtxw.com'
   - '+.rmlxx.com'
@@ -45357,7 +45366,6 @@ payload:
   - '+.rrzuji.com'
   - '+.rrzxw.net'
   - '+.rs485.net'
-  - '+.rsb.net'
   - '+.rscala.com'
   - '+.rscloudmart.com'
   - '+.rsdgd.com'
@@ -45575,6 +45583,7 @@ payload:
   - '+.rzhuaqiangu.com'
   - '+.rzline.com'
   - '+.rzok.net'
+  - '+.rzspx.com'
   - '+.rzszp.com'
   - '+.rzwssy.com'
   - '+.rzx.me'
@@ -47153,6 +47162,7 @@ payload:
   - '+.shjxfc.com'
   - '+.shjyou.com'
   - '+.shjyyx.com'
+  - '+.shjzfutures.com'
   - '+.shkegai.net'
   - '+.shkingchem.com'
   - '+.shkkl.com'
@@ -48465,6 +48475,7 @@ payload:
   - '+.sojump.hk'
   - '+.sokoban.ws'
   - '+.soku.com'
+  - '+.sokuba.com'
   - '+.sokutu.com'
   - '+.solarbe.com'
   - '+.solaridc.com'
@@ -52174,13 +52185,13 @@ payload:
   - '+.tuotuozu.com'
   - '+.tuoweisi.com'
   - '+.tuoxiaoshebei.com'
-  - '+.tuoyundan.com'
   - '+.tuozhe8.com'
   - '+.tupai.me'
   - '+.tupian114.com'
   - '+.tupian1234.com'
   - '+.tupian365.com'
   - '+.tupiancunchu.com'
+  - '+.tupianjp.com'
   - '+.tupiankucdn.com'
   - '+.tupianzj.com'
   - '+.tupu360.com'
@@ -56141,6 +56152,7 @@ payload:
   - '+.wsqejt.com'
   - '+.wsry18.xyz'
   - '+.wsssec.com'
+  - '+.wstong.com'
   - '+.wstx.com'
   - '+.wsurl.cc'
   - '+.wsview.com'
@@ -58436,6 +58448,7 @@ payload:
   - '+.xn--s4t325g.com'
   - '+.xn--w9qy23cc6adz7d.net'
   - '+.xn--wlqw5ebvdhpi5hepihs3c.com'
+  - '+.xn--xkrs9ba41r.com'
   - '+.xn--ygtp21bwyedsq.com'
   - '+.xn-ck.com'
   - '+.xn121.com'
@@ -59080,7 +59093,6 @@ payload:
   - '+.xyrbszb.com'
   - '+.xyrtv.com'
   - '+.xysb.com'
-  - '+.xyssdzrmzf.com'
   - '+.xysstgs.com'
   - '+.xystatic.com'
   - '+.xystoy.com'
@@ -59157,6 +59169,7 @@ payload:
   - '+.xzlogo.com'
   - '+.xzlres.com'
   - '+.xzltzc.com'
+  - '+.xzlwz.com'
   - '+.xzm56.com'
   - '+.xzn56.com'
   - '+.xzoo.org'
@@ -59535,6 +59548,7 @@ payload:
   - '+.yddff556.xyz'
   - '+.ydh.fun'
   - '+.ydimmi.com'
+  - '+.ydjdcjc.com'
   - '+.ydjia.com'
   - '+.ydjt1166.com'
   - '+.ydkj2019.com'
@@ -60577,6 +60591,7 @@ payload:
   - '+.ynlvyou20.com'
   - '+.ynlyfw.com'
   - '+.ynmec.com'
+  - '+.ynnits.com'
   - '+.ynpxrz.com'
   - '+.ynrayy.com'
   - '+.ynshangji.com'
@@ -60586,6 +60601,7 @@ payload:
   - '+.ynteng.com'
   - '+.yntsg.com'
   - '+.ynwin.com'
+  - '+.ynxdfpr.com'
   - '+.ynxr.com'
   - '+.ynxxb.com'
   - '+.ynycloud.xyz'
@@ -62820,7 +62836,6 @@ payload:
   - '+.zhe4000.com'
   - '+.zhe800.com'
   - '+.zhebei.com'
-  - '+.zhebiekeji.com'
   - '+.zhefengle.com'
   - '+.zhejiangmuseum.com'
   - '+.zhejiangqinghe.com'
@@ -63830,6 +63845,7 @@ payload:
   - '+.zjldrcb.com'
   - '+.zjlottery.com'
   - '+.zjlsbz.com'
+  - '+.zjlsjc.com'
   - '+.zjlvjie.com'
   - '+.zjlxtx.com'
   - '+.zjmax.com'
