--- a/directbak.yaml
+++ b/directbak.yaml
@@ -38,7 +38,6 @@ payload:
   - '+.007qu.com'
   - '+.007shoes.com'
   - '+.007swz.com'
-  - '+.008008789.com'
   - '+.00817.com'
   - '+.0082tv.com'
   - '+.008321.com'
@@ -302,7 +301,6 @@ payload:
   - '+.0430.com'
   - '+.0431cn.com'
   - '+.0437.com'
-  - '+.04486.com'
   - '+.0452e.com'
   - '+.0453.com'
   - '+.0455zd.com'
@@ -876,6 +874,7 @@ payload:
   - '+.1128.org'
   - '+.112812.com'
   - '+.1128job.com'
+  - '+.112book.com'
   - '+.112seo.com'
   - '+.112wan.com'
   - '+.11315.com'
@@ -944,6 +943,7 @@ payload:
   - '+.117play.com'
   - '+.118114.net'
   - '+.1188.com'
+  - '+.118cha.com'
   - '+.118cy.com'
   - '+.118jm.com'
   - '+.118pan.com'
@@ -2364,7 +2364,6 @@ payload:
   - '+.2cloo.com'
   - '+.2cname.com'
   - '+.2cq.com'
-  - '+.2cto.com'
   - '+.2cycd.com'
   - '+.2cycomic.com'
   - '+.2cyxw.com'
@@ -3588,7 +3587,6 @@ payload:
   - '+.51-n.com'
   - '+.51.am'
   - '+.51.com'
-  - '+.51.design'
   - '+.51.la'
   - '+.51.net'
   - '+.5100.net'
@@ -4372,7 +4370,6 @@ payload:
   - '+.52njl.com'
   - '+.52njl.net'
   - '+.52opencourse.com'
-  - '+.52pachong.com'
   - '+.52pcfree.com'
   - '+.52ph.com'
   - '+.52pi.com'
@@ -5124,6 +5121,7 @@ payload:
   - '+.646av06.xyz'
   - '+.646av08.xyz'
   - '+.646av09.xyz'
+  - '+.646av12.xyz'
   - '+.648sy.com'
   - '+.64ba.com'
   - '+.64dns.com'
@@ -5622,7 +5620,6 @@ payload:
   - '+.77l.com'
   - '+.77mh.app'
   - '+.77music.com'
-  - '+.77mv.com'
   - '+.77nt.com'
   - '+.77piano.com'
   - '+.77tel.com'
@@ -6129,6 +6126,7 @@ payload:
   - '+.88765.com'
   - '+.887w.com'
   - '+.8888800000.com'
+  - '+.88888aaa.com'
   - '+.888pic.com'
   - '+.888ppt.com'
   - '+.888rj.com'
@@ -7509,6 +7507,7 @@ payload:
   - '+.afjk.com'
   - '+.afjob88.com'
   - '+.afriendx.com'
+  - '+.afs-seminars.com'
   - '+.afshanghai.org'
   - '+.aft1v1.com'
   - '+.afu.io'
@@ -9168,6 +9167,7 @@ payload:
   - '+.atop.fun'
   - '+.atpanel.com'
   - '+.atstudy.com'
+  - '+.atsws.com'
   - '+.attacker.fit'
   - '+.attakids.com'
   - '+.attri.mobi'
@@ -10298,6 +10298,7 @@ payload:
   - '+.beiwaionline.com'
   - '+.beiwaiqingshao.com'
   - '+.beiwangshan.com'
+  - '+.beiweigroup.com'
   - '+.beiwo.com'
   - '+.beiwo.tv'
   - '+.beiww.com'
@@ -10437,6 +10438,7 @@ payload:
   - '+.betterzipcn.com'
   - '+.beva.com'
   - '+.bevol.com'
+  - '+.bevzc.com'
   - '+.bewellbio.com'
   - '+.beyebe.com'
   - '+.beyondbit.com'
@@ -10447,10 +10449,10 @@ payload:
   - '+.beyonds.com'
   - '+.beyoner.net'
   - '+.bf-z.com'
+  - '+.bf-zhengzhou.com'
   - '+.bf35.com'
   - '+.bf92.com'
   - '+.bfcmovie.com'
-  - '+.bfdcdn.com'
   - '+.bfdfe.com'
   - '+.bffzb.com'
   - '+.bfjjw.com'
@@ -10727,6 +10729,7 @@ payload:
   - '+.binzc.com'
   - '+.binzhi.com'
   - '+.binzhouquan.com'
+  - '+.binzhouw.com'
   - '+.binzhuang.com'
   - '+.bio-equip.com'
   - '+.bio-fuyang.com'
@@ -10798,6 +10801,7 @@ payload:
   - '+.biquke.com'
   - '+.biquku.co'
   - '+.biquku.la'
+  - '+.biqukun.la'
   - '+.biqulou.net'
   - '+.biquluo.com'
   - '+.biqumo.com'
@@ -11486,7 +11490,6 @@ payload:
   - '+.boohee.com'
   - '+.book118.com'
   - '+.book1234.com'
-  - '+.book520.com'
   - '+.bookask.com'
   - '+.bookba.net'
   - '+.bookbook.in'
@@ -11775,7 +11778,6 @@ payload:
   - '+.buddhalikedoge.com'
   - '+.budhano.com'
   - '+.buding.tv'
-  - '+.budongnvren.com'
   - '+.budou.com'
   - '+.buduanwang.vip'
   - '+.buduobaobao.com'
@@ -12333,6 +12335,7 @@ payload:
   - '+.canjiren.net'
   - '+.cankao100.com'
   - '+.cankaoshouce.com'
+  - '+.cankaowang.com'
   - '+.cankaoxiaoxi.com'
   - '+.canmounet.com'
   - '+.canpdu.com'
@@ -13018,7 +13021,6 @@ payload:
   - '+.ceeie.com'
   - '+.ceeji.net'
   - '+.ceepsp.com'
-  - '+.ceev-japan.com'
   - '+.cef114.com'
   - '+.cefc.co'
   - '+.cehbe.com'
@@ -13443,7 +13445,6 @@ payload:
   - '+.chatm.com'
   - '+.chatnos.com'
   - '+.chawenti.com'
-  - '+.chawenyi.com'
   - '+.chawo.com'
   - '+.chaxinyu.net'
   - '+.chaxunfapiao.com'
@@ -14305,7 +14306,6 @@ payload:
   - '+.chinaun.net'
   - '+.chinaunicom-a.com'
   - '+.chinaunicom.com'
-  - '+.chinauniforms.com'
   - '+.chinaunionpay.com'
   - '+.chinauniversalasset.com'
   - '+.chinaunix.com'
@@ -15087,7 +15087,6 @@ payload:
   - '+.cmbchina.com'
   - '+.cmbchina.net'
   - '+.cmbimg.com'
-  - '+.cmbuy10086.com'
   - '+.cmbwinglungbank.com'
   - '+.cmbyc.com'
   - '+.cmcc-ecs.com'
@@ -15313,6 +15312,7 @@ payload:
   - '+.cncrony.com'
   - '+.cncrypt.com'
   - '+.cncsj.net'
+  - '+.cnction.com'
   - '+.cnctui.com'
   - '+.cncwkj.com'
   - '+.cnczjy.com'
@@ -15529,6 +15529,7 @@ payload:
   - '+.cnlive.com'
   - '+.cnliveimg.com'
   - '+.cnllz.com'
+  - '+.cnlso.com'
   - '+.cnmanhua.com'
   - '+.cnmattson.com'
   - '+.cnmb.win'
@@ -16260,6 +16261,7 @@ payload:
   - '+.cqlp.com'
   - '+.cqlyckj.com'
   - '+.cqmama.net'
+  - '+.cqmanfeite.com'
   - '+.cqmas.com'
   - '+.cqmcu.com'
   - '+.cqmjkjzx.com'
@@ -16954,6 +16956,7 @@ payload:
   - '+.cznewcom.com'
   - '+.czongyi.com'
   - '+.czopen.com'
+  - '+.czos.xyz'
   - '+.czpoly.com'
   - '+.czrj.com'
   - '+.czry888.com'
@@ -17001,6 +17004,7 @@ payload:
   - '+.d2kdi2ss.com'
   - '+.d2scdn.com'
   - '+.d2shost.com'
+  - '+.d2ziran.com'
   - '+.d3ch.com'
   - '+.d3cn.net'
   - '+.d3dweb.com'
@@ -17919,6 +17923,7 @@ payload:
   - '+.dfmc.com'
   - '+.dfmcastrol.com'
   - '+.dfmingya.com'
+  - '+.dfn6666.com'
   - '+.dfpk.com'
   - '+.dfrcb.com'
   - '+.dfs168.com'
@@ -18322,7 +18327,6 @@ payload:
   - '+.dipont.com'
   - '+.diqi.net'
   - '+.diqi.sh'
-  - '+.diqibu.com'
   - '+.diqishu.com'
   - '+.diqiujiayuan.com'
   - '+.diqiuw.com'
@@ -19605,8 +19609,8 @@ payload:
   - '+.e-chinalife.com'
   - '+.e-cloudstore.com'
   - '+.e-cookies.net'
+  - '+.e-cspc.com'
   - '+.e-cuc.com'
-  - '+.e-cwinfo.com'
   - '+.e-dache.com'
   - '+.e-deehoo.com'
   - '+.e-eway.com'
@@ -19903,7 +19907,9 @@ payload:
   - '+.echuandan.com'
   - '+.eciawards.org'
   - '+.ecice06.com'
+  - '+.ecinnovations.com'
   - '+.ecitic.com'
+  - '+.eciticcfc.com'
   - '+.ecjson.com'
   - '+.eckjzx.com'
   - '+.eckwai.com'
@@ -20641,6 +20647,7 @@ payload:
   - '+.esouti.com'
   - '+.esoyu.com'
   - '+.espnlol.com'
+  - '+.esqc.xyz'
   - '+.esr.com'
   - '+.essaystar.com'
   - '+.essca.com'
@@ -21611,6 +21618,7 @@ payload:
   - '+.fengqu.com'
   - '+.fengread.com'
   - '+.fengshangweekly.com'
+  - '+.fengshi.tech'
   - '+.fengsung.com'
   - '+.fengtai.tv'
   - '+.fengtalk.com'
@@ -22230,7 +22238,6 @@ payload:
   - '+.fractal-technology.com'
   - '+.francissoung.com'
   - '+.francochinois.com'
-  - '+.frankorz.com'
   - '+.franzsandner.com'
   - '+.frdic.com'
   - '+.fread.com'
@@ -22502,7 +22509,6 @@ payload:
   - '+.fuxunpay.com'
   - '+.fuyangtv.com'
   - '+.fuych.net'
-  - '+.fuyeor.com'
   - '+.fuyinchina.com'
   - '+.fuyou888.com'
   - '+.fuyoubank.com'
@@ -22981,6 +22987,7 @@ payload:
   - '+.gblhgk.com'
   - '+.gbofd.com'
   - '+.gboooo.com'
+  - '+.gbphar.com'
   - '+.gbpjam.com'
   - '+.gbt88.com'
   - '+.gbtags.com'
@@ -23012,6 +23019,7 @@ payload:
   - '+.gcores.com'
   - '+.gcstorage.com'
   - '+.gcsz.net'
+  - '+.gctd.xyz'
   - '+.gcwduoduo.com'
   - '+.gcyts.com'
   - '+.gczp.cc'
@@ -24194,7 +24202,6 @@ payload:
   - '+.gtm-i2d8.com'
   - '+.gtmlufax.com'
   - '+.gtn9.com'
-  - '+.gto365.com'
   - '+.gtobal.com'
   - '+.gttxidc.com'
   - '+.gtuanb.com'
@@ -24329,6 +24336,7 @@ payload:
   - '+.gugutown.com'
   - '+.guguyu.com'
   - '+.guhai66.com'
+  - '+.guhuozaiol.com'
   - '+.gui333.com'
   - '+.gui66.com'
   - '+.guibi.com'
@@ -25178,6 +25186,7 @@ payload:
   - '+.hangzhoufcw.com'
   - '+.hangzhouluohu.com'
   - '+.hangzhoutianqi114.com'
+  - '+.hangzhouzhiqi.com'
   - '+.hanhai.net'
   - '+.hanhaiqikan.com'
   - '+.hanhwlab.com'
@@ -25896,6 +25905,7 @@ payload:
   - '+.he-one.com'
   - '+.he11oworld.com'
   - '+.he1j.com'
+  - '+.he29.com'
   - '+.he2d.com'
   - '+.he9630.com'
   - '+.heacn.net'
@@ -26522,6 +26532,7 @@ payload:
   - '+.hiyongche.com'
   - '+.hiyouib.com'
   - '+.hiyouqu.com'
+  - '+.hiyun.site'
   - '+.hizg.org'
   - '+.hizhu.com'
   - '+.hizip.net'
@@ -26700,6 +26711,7 @@ payload:
   - '+.hnaccp.com'
   - '+.hnaee.com'
   - '+.hnagroup.com'
+  - '+.hnagroup.net'
   - '+.hnair.com'
   - '+.hnair.net'
   - '+.hnaiya.com'
@@ -26986,6 +26998,7 @@ payload:
   - '+.hongxiu.cc'
   - '+.hongxiu.com'
   - '+.hongyan.info'
+  - '+.hongyanjin.com'
   - '+.hongyanliren.com'
   - '+.hongyaxuan.com'
   - '+.hongyeshuzhai.com'
@@ -28294,7 +28307,6 @@ payload:
   - '+.hz-etest.com'
   - '+.hz-gn.com'
   - '+.hz-hospital.com'
-  - '+.hz-jiadi.com'
   - '+.hz-winone.com'
   - '+.hz-xin.com'
   - '+.hz1cm.com'
@@ -29326,6 +29338,7 @@ payload:
   - '+.ileedarson.com'
   - '+.ileehoo.com'
   - '+.ilego.club'
+  - '+.ileshua.com'
   - '+.ilewan.com'
   - '+.iliangcang.com'
   - '+.ilibrand.com'
@@ -29434,6 +29447,7 @@ payload:
   - '+.imeiju.cc'
   - '+.imeijutt.com'
   - '+.imeishike.com'
+  - '+.imeitools.com'
   - '+.imeitou.com'
   - '+.imekaku.com'
   - '+.imeme.tv'
@@ -29647,6 +29661,7 @@ payload:
   - '+.infoxa.com'
   - '+.infoxgame.com'
   - '+.infoxmation.com'
+  - '+.inframe.mobi'
   - '+.infzm.com'
   - '+.ing10bbs.com'
   - '+.ingageapp.com'
@@ -29949,6 +29964,7 @@ payload:
   - '+.iqunix.com'
   - '+.iqunix.store'
   - '+.iqupdate.com'
+  - '+.iqushai.com'
   - '+.iquwang.com'
   - '+.iqxbf.com'
   - '+.iqxedu.com'
@@ -30658,6 +30674,7 @@ payload:
   - '+.jchelec.com'
   - '+.jchl.com'
   - '+.jchla.com'
+  - '+.jchunuo.com'
   - '+.jchxmc.com'
   - '+.jcicl.com'
   - '+.jcku.com'
@@ -31289,6 +31306,7 @@ payload:
   - '+.jieyang.la'
   - '+.jieyou.com'
   - '+.jieyougame.com'
+  - '+.jieyougx.com'
   - '+.jieyoujob.com'
   - '+.jieyue.net'
   - '+.jiez238.com'
@@ -33269,6 +33287,7 @@ payload:
   - '+.kbw2018.com'
   - '+.kbyun.com'
   - '+.kc87.com'
+  - '+.kccidc.com'
   - '+.kcdn0.com'
   - '+.kcdns.net'
   - '+.kcdnvip.com'
@@ -33544,7 +33563,6 @@ payload:
   - '+.kindle-china.org'
   - '+.kindlehub.mobi'
   - '+.kindlelib.com'
-  - '+.kindleport.com'
   - '+.kindlepush.com'
   - '+.kinefinity.com'
   - '+.king-capital.com'
@@ -33595,7 +33613,6 @@ payload:
   - '+.kingwam.com'
   - '+.kingwisoft.com'
   - '+.kingyon.com'
-  - '+.kingysu.com'
   - '+.kinhom.com'
   - '+.kinpan.com'
   - '+.kinqee.com'
@@ -34430,6 +34447,7 @@ payload:
   - '+.kztpms.com'
   - '+.kzwr.com'
   - '+.l-blog.me'
+  - '+.l069.com'
   - '+.l2h.site'
   - '+.l2t7.cc'
   - '+.l36h.com'
@@ -34503,7 +34521,6 @@ payload:
   - '+.laiqi.net'
   - '+.laiqukankan.com'
   - '+.laird-tek.com'
-  - '+.laishuge.com'
   - '+.laishui.info'
   - '+.laisj.com'
   - '+.laituia.com'
@@ -35204,7 +35221,6 @@ payload:
   - '+.lewenn.com'
   - '+.lewenxsw.com'
   - '+.lewifi.com'
-  - '+.lewode.com'
   - '+.lexapro-web.com'
   - '+.lexar.com'
   - '+.lexiang-asset.com'
@@ -35864,7 +35880,6 @@ payload:
   - '+.liudatxt.com'
   - '+.liudon.org'
   - '+.liudu.com'
-  - '+.liudu9.com'
   - '+.liugejava.com'
   - '+.liugezhou.online'
   - '+.liugj.com'
@@ -36697,7 +36712,6 @@ payload:
   - '+.luoohu.com'
   - '+.luooqi.com'
   - '+.luoqiu.com'
-  - '+.luoqiuxs.com'
   - '+.luoqiuzw.com'
   - '+.luoqiuzww.com'
   - '+.luosi.com'
@@ -37460,7 +37474,6 @@ payload:
   - '+.mas300275.com'
   - '+.masadora.jp'
   - '+.masadora.net'
-  - '+.masamaso.com'
   - '+.mascaw.com'
   - '+.masdjy.com'
   - '+.masej.com'
@@ -37580,7 +37593,6 @@ payload:
   - '+.mbaoxian.net'
   - '+.mbazl.com'
   - '+.mbb0760.com'
-  - '+.mbcjapan.net'
   - '+.mbcloud.com'
   - '+.mbgo.com'
   - '+.mbinary.xyz'
@@ -39126,6 +39138,7 @@ payload:
   - '+.mspring.org'
   - '+.msrtvu.net'
   - '+.msstatic.com'
+  - '+.mst-jc.com'
   - '+.mstarsemi.com'
   - '+.mstchina.com'
   - '+.msudz.com'
@@ -39156,6 +39169,7 @@ payload:
   - '+.mtcop.com'
   - '+.mtcsys.com'
   - '+.mtcx99.com'
+  - '+.mtcxsw.com'
   - '+.mtdpai.com'
   - '+.mtdpgame.com'
   - '+.mtedu.com'
@@ -39598,7 +39612,6 @@ payload:
   - '+.myunying.com'
   - '+.myushan.com'
   - '+.mywakao.com'
-  - '+.mywang.net'
   - '+.mywayboo.net'
   - '+.myweimai.com'
   - '+.mywhh.com'
@@ -39927,6 +39940,7 @@ payload:
   - '+.negroupedu.org'
   - '+.neigou.com'
   - '+.neihanshequ.com'
+  - '+.neihhou.com'
   - '+.neisha.cc'
   - '+.neitui.com'
   - '+.neituixiaowangzi.com'
@@ -40128,6 +40142,7 @@ payload:
   - '+.nexttix.net'
   - '+.nextyu.com'
   - '+.nexus.dell.com'
+  - '+.nexushd.org'
   - '+.nfc315.com'
   - '+.nfcic.com'
   - '+.nfcmag.com'
@@ -40136,6 +40151,7 @@ payload:
   - '+.nfmedia.com'
   - '+.nfmrtfv.com'
   - '+.nfpeople.com'
+  - '+.nfrencai.com'
   - '+.nfs-china.com'
   - '+.nfschina.com'
   - '+.nfwin.com'
@@ -40355,6 +40371,7 @@ payload:
   - '+.njcgs.com'
   - '+.njcitygas.com'
   - '+.njcw.com'
+  - '+.njcyt99.com'
   - '+.njd1.com'
   - '+.njdapaidang.com'
   - '+.njdewo.com'
@@ -40648,6 +40665,7 @@ payload:
   - '+.ntejiazheng.com'
   - '+.ntes53.com'
   - '+.ntfabu.com'
+  - '+.ntflk.com'
   - '+.ntfsformac.cc'
   - '+.nthfw.com'
   - '+.nthysp.com'
@@ -41823,7 +41841,6 @@ payload:
   - '+.pb89.com'
   - '+.pbcan.com'
   - '+.pbcdn.com'
-  - '+.pbhz.com'
   - '+.pblie.com'
   - '+.pbsidc.com'
   - '+.pbsvpn.com'
@@ -42557,6 +42574,7 @@ payload:
   - '+.pokochin-house.com'
   - '+.pokooo.com'
   - '+.polaris-vc.com'
+  - '+.polars.cc'
   - '+.polarws.moe'
   - '+.polarxiong.com'
   - '+.polaxiong.com'
@@ -43106,6 +43124,7 @@ payload:
   - '+.qcloudestate.com'
   - '+.qcloudimg.com'
   - '+.qcloudmail.com'
+  - '+.qcloudtiw.com'
   - '+.qcloudwzgj.com'
   - '+.qcloudzygj.com'
   - '+.qcmoke.site'
@@ -44323,6 +44342,8 @@ payload:
   - '+.queniubg.com'
   - '+.queniucf.com'
   - '+.queniufm.com'
+  - '+.queniuso.com'
+  - '+.queniusy.com'
   - '+.queniuuf.com'
   - '+.queqiaoba.com'
   - '+.querylist.cc'
@@ -44962,6 +44983,7 @@ payload:
   - '+.renwole.com'
   - '+.renwuyi.com'
   - '+.renxingwang.com'
+  - '+.renxueyanjiu.com'
   - '+.renyaohua.com'
   - '+.renyiwei.com'
   - '+.renyufei.com'
@@ -45340,7 +45362,6 @@ payload:
   - '+.rrky.com'
   - '+.rrkyw.com'
   - '+.rrl360.com'
-  - '+.rrliuxue.com'
   - '+.rrmeiju.com'
   - '+.rrmj.tv'
   - '+.rrppt.com'
@@ -45378,6 +45399,7 @@ payload:
   - '+.rssmeet.com'
   - '+.rssmv.com'
   - '+.rsty77.com'
+  - '+.rsuedu.com'
   - '+.rsw163.com'
   - '+.rswiki.org'
   - '+.rsxc01.com'
@@ -45736,6 +45758,7 @@ payload:
   - '+.sanhao.com'
   - '+.sanhaofushi.com'
   - '+.sanhaoradio.com'
+  - '+.sanhaostreet.com'
   - '+.sanhe-scale.com'
   - '+.sanhucidiao.cc'
   - '+.sanjiang.com'
@@ -45780,7 +45803,6 @@ payload:
   - '+.sanwen8.com'
   - '+.sanwer.com'
   - '+.sanxia-china.com'
-  - '+.sanxiamarathon.com'
   - '+.sanxiapharm.com'
   - '+.sanxige.com'
   - '+.sanxinbook.com'
@@ -46100,6 +46122,7 @@ payload:
   - '+.sdjcw.com'
   - '+.sdjinlan.com'
   - '+.sdjnwx.com'
+  - '+.sdjob110.com'
   - '+.sdjtbd.com'
   - '+.sdjtcx.com'
   - '+.sdjushu.com'
@@ -46152,6 +46175,7 @@ payload:
   - '+.sdwdxl.com'
   - '+.sdwenlian.com'
   - '+.sdwgyy.com'
+  - '+.sdwscgs.com'
   - '+.sdx.microsoft.com'
   - '+.sdxczn.com'
   - '+.sdxietong.com'
@@ -47619,6 +47643,7 @@ payload:
   - '+.shyouai.com'
   - '+.shyouth.net'
   - '+.shyrcb.com'
+  - '+.shyuanye.com'
   - '+.shyueai.com'
   - '+.shyuwl.com'
   - '+.shyuzhai.com'
@@ -47699,7 +47724,6 @@ payload:
   - '+.sihuida.net'
   - '+.sihuisoft.com'
   - '+.siii.xyz'
-  - '+.siiic.com'
   - '+.siilu.com'
   - '+.sijiaomao.com'
   - '+.sijijun.com'
@@ -47826,6 +47850,7 @@ payload:
   - '+.sinochem.com'
   - '+.sinochemb2c.com'
   - '+.sinochemitc.com'
+  - '+.sinoclick.com'
   - '+.sinocul.com'
   - '+.sinoec.net'
   - '+.sinoergy.com'
@@ -48996,6 +49021,7 @@ payload:
   - '+.staticf.com'
   - '+.staticfile.org'
   - '+.statickksmg.com'
+  - '+.statics.cc'
   - '+.staticssl.image-gmkt.com'
   - '+.staycu.com'
   - '+.stbieshu.com'
@@ -49466,6 +49492,7 @@ payload:
   - '+.svenhetin.com'
   - '+.svinsight.com'
   - '+.svip15.com'
+  - '+.svip51.com'
   - '+.svipduihuan.com'
   - '+.svlik.com'
   - '+.svmuu.com'
@@ -49649,7 +49676,6 @@ payload:
   - '+.sydjwl.com'
   - '+.sydw8.com'
   - '+.sydzconn.com'
-  - '+.sydzdiy.com'
   - '+.syf.ink'
   - '+.syfabiao.com'
   - '+.syfw.com'
@@ -51072,6 +51098,7 @@ payload:
   - '+.tielu.org'
   - '+.tiepishihu.com'
   - '+.tiepishihu.hk'
+  - '+.tiequangame.com'
   - '+.tietie.la'
   - '+.tietuku.com'
   - '+.tieweishi.com'
@@ -51947,7 +51974,6 @@ payload:
   - '+.ttkdex.com'
   - '+.ttkefu.com'
   - '+.ttkkuu.com'
-  - '+.ttkmj.org'
   - '+.ttkuan.com'
   - '+.ttkxh.com'
   - '+.ttll.cc'
@@ -55169,6 +55195,7 @@ payload:
   - '+.whfeiyou.com'
   - '+.whfengli.com'
   - '+.whflfa.com'
+  - '+.whfyhouse.com'
   - '+.whgaodu.com'
   - '+.whgaopeng.com'
   - '+.whggjk.com'
@@ -56150,7 +56177,6 @@ payload:
   - '+.wsoversea.info'
   - '+.wsq.cool'
   - '+.wsqejt.com'
-  - '+.wsry18.xyz'
   - '+.wsssec.com'
   - '+.wstong.com'
   - '+.wstx.com'
@@ -56176,6 +56202,7 @@ payload:
   - '+.wtango.com'
   - '+.wtapi.com'
   - '+.wtbds.com'
+  - '+.wtcxs.com'
   - '+.wtdex.com'
   - '+.wtdlq.com'
   - '+.wtdms.com'
@@ -56480,7 +56507,6 @@ payload:
   - '+.wx2h.com'
   - '+.wx2share.com'
   - '+.wx42.com'
-  - '+.wx6.org'
   - '+.wx8s.com'
   - '+.wx939.com'
   - '+.wxagame.com'
@@ -56764,6 +56790,7 @@ payload:
   - '+.xazcit.com'
   - '+.xazjw.com'
   - '+.xaztdz.com'
+  - '+.xazwy.com'
   - '+.xazzg.com'
   - '+.xazzp.com'
   - '+.xazzs.com'
@@ -57424,6 +57451,7 @@ payload:
   - '+.xiaomyc.com'
   - '+.xiaonaodai.com'
   - '+.xiaonei.com'
+  - '+.xiaonianyu.com'
   - '+.xiaoniba.com'
   - '+.xiaoniu66.com'
   - '+.xiaoniu88.com'
@@ -58943,6 +58971,7 @@ payload:
   - '+.xwko.com'
   - '+.xwlunwen.com'
   - '+.xwlxw.com'
+  - '+.xwmxs.com'
   - '+.xwood.net'
   - '+.xwtex.com'
   - '+.xwuad.com'
@@ -59421,6 +59450,7 @@ payload:
   - '+.yaoyuanba.com'
   - '+.yaozh.com'
   - '+.yaozhixiang.com'
+  - '+.yaozhizhu.com'
   - '+.yaozs.com'
   - '+.yareiot.com'
   - '+.yaristyle.com'
@@ -61325,7 +61355,6 @@ payload:
   - '+.yuanzige.com'
   - '+.yuanzun.fun'
   - '+.yuanzun5200.com'
-  - '+.yuanzun888.com'
   - '+.yuanzunxs.cc'
   - '+.yuapt.com'
   - '+.yubaike.com'
@@ -61412,6 +61441,7 @@ payload:
   - '+.yuexinli.com'
   - '+.yuexinyouxi.com'
   - '+.yuexirc.com'
+  - '+.yuexiu.com'
   - '+.yuexunedu.com'
   - '+.yueyaa.com'
   - '+.yueyanglou.com'
@@ -61572,6 +61602,7 @@ payload:
   - '+.yunfandns.com'
   - '+.yunfangtan.com'
   - '+.yunfanka.com'
+  - '+.yunfanyouxi.com'
   - '+.yunfei89.com'
   - '+.yunfutech.com'
   - '+.yungangbj.com'
@@ -62271,6 +62302,7 @@ payload:
   - '+.zcaijing.com'
   - '+.zcccc.com'
   - '+.zcdog.com'
+  - '+.zcedustudy.com'
   - '+.zcfc.com'
   - '+.zcfirst.com'
   - '+.zcfuhua.com'
@@ -63145,7 +63177,6 @@ payload:
   - '+.zhiyuanxingxiang.com'
   - '+.zhiyuanyun.com'
   - '+.zhiyuanzhongyi.com'
-  - '+.zhiyujit.com'
   - '+.zhiyun-tech.com'
   - '+.zhizaoye.net'
   - '+.zhizaoyun.com'
@@ -63759,6 +63790,7 @@ payload:
   - '+.zj96596.com'
   - '+.zjabank.com'
   - '+.zjaf.net'
+  - '+.zjapk.com'
   - '+.zjaqxy.com'
   - '+.zjautoparts.com'
   - '+.zjbiz.net'
@@ -64125,6 +64157,7 @@ payload:
   - '+.zongheng.com'
   - '+.zongheng001.com'
   - '+.zonghengke.com'
+  - '+.zonghengnews.com'
   - '+.zonglai.mobi'
   - '+.zongming.net'
   - '+.zongs365.com'
