--- a/directbak.yaml
+++ b/directbak.yaml
@@ -171,7 +171,6 @@ payload:
   - '+.0243811.com'
   - '+.0243855.com'
   - '+.0245.cc'
-  - '+.0245.org'
   - '+.024888.net'
   - '+.02489.com'
   - '+.024bj.com'
@@ -184,12 +183,10 @@ payload:
   - '+.024heyi.com'
   - '+.024hh.com'
   - '+.024huada.com'
-  - '+.024zihai.com'
   - '+.024zol.com'
   - '+.024zxw.com'
   - '+.02516.com'
   - '+.025ct.com'
-  - '+.025ebaidu.com'
   - '+.025kaiyi.com'
   - '+.025nj.com'
   - '+.025sc.com'
@@ -1778,7 +1775,6 @@ payload:
   - '+.1hkt.com'
   - '+.1hshop.com'
   - '+.1huamu.com'
-  - '+.1i580.com'
   - '+.1iptv.com'
   - '+.1j1x.net'
   - '+.1jduan.com'
@@ -1921,7 +1917,6 @@ payload:
   - '+.2016win10.com'
   - '+.20174555.com'
   - '+.2017taoke.com'
-  - '+.2018jsybh.com'
   - '+.2018zjjly.com'
   - '+.2019cdac.com'
   - '+.202030.com'
@@ -2830,7 +2825,6 @@ payload:
   - '+.360safe.com'
   - '+.360safedns.com'
   - '+.360sdn.com'
-  - '+.360shipu.com'
   - '+.360shouji.com'
   - '+.360shouzhuan.com'
   - '+.360sok.com'
@@ -4235,7 +4229,6 @@ payload:
   - '+.521szlx.com'
   - '+.521tieba.com'
   - '+.521up.com'
-  - '+.521wmy.com'
   - '+.52237377.com'
   - '+.522g.com'
   - '+.523333.com'
@@ -4430,7 +4423,6 @@ payload:
   - '+.52xiaoshuowang.com'
   - '+.52xiaoyuan.net'
   - '+.52xie.com'
-  - '+.52xinmiao.com'
   - '+.52xinyou.com'
   - '+.52xitong.com'
   - '+.52xiuxian.com'
@@ -5037,7 +5029,6 @@ payload:
   - '+.6111.fyi'
   - '+.612.com'
   - '+.6120aa.com'
-  - '+.6122.net'
   - '+.612345.com'
   - '+.612459.com'
   - '+.6137.net'
@@ -6746,7 +6737,6 @@ payload:
   - '+.96sdk.com'
   - '+.96sir.com'
   - '+.96weixin.com'
-  - '+.96youhuiquan.com'
   - '+.96yx.com'
   - '+.96zxue.com'
   - '+.97-7.com'
@@ -7078,10 +7068,7 @@ payload:
   - '+.a-map.link'
   - '+.a-sy.com'
   - '+.a0598.com'
-  - '+.a0b88.com'
   - '+.a0bi.com'
-  - '+.a0c00.com'
-  - '+.a0c77.com'
   - '+.a1166.com'
   - '+.a135.net'
   - '+.a166.com'
@@ -7175,7 +7162,6 @@ payload:
   - '+.abiz.com'
   - '+.ablanxue.com'
   - '+.able-elec.com'
-  - '+.ableaders.com'
   - '+.ablejeans.com'
   - '+.ablesci.com'
   - '+.ablesky.com'
@@ -7281,6 +7267,7 @@ payload:
   - '+.acpf-cn.org'
   - '+.acq42.com'
   - '+.acrel-eem.com'
+  - '+.acrel-znyf.com'
   - '+.across-mbox.com'
   - '+.acrpc.com'
   - '+.acshoes.com'
@@ -8671,7 +8658,6 @@ payload:
   - '+.aoliday.com'
   - '+.aolylcd.com'
   - '+.aomeng.net'
-  - '+.aomoxo.com'
   - '+.aomygod.com'
   - '+.aomygodstatic.com'
   - '+.aonaotu.com'
@@ -8929,7 +8915,6 @@ payload:
   - '+.archgo.com'
   - '+.archi-motive.com'
   - '+.archiant.com'
-  - '+.archidead.net'
   - '+.archina.com'
   - '+.archiname.com'
   - '+.archio.pro'
@@ -9646,7 +9631,6 @@ payload:
   - '+.baiwandz.com'
   - '+.baiwang.com'
   - '+.baiwangjs.com'
-  - '+.baiwantuan.com'
   - '+.baiwutong.com'
   - '+.baixiangxiang.com'
   - '+.baixiaosheng.net'
@@ -9921,6 +9905,7 @@ payload:
   - '+.baozou.com'
   - '+.baozoudi.com'
   - '+.baozoumanhua.com'
+  - '+.baozugongkeji.com'
   - '+.baozy.com'
   - '+.baping.com'
   - '+.baqima.com'
@@ -10376,7 +10361,6 @@ payload:
   - '+.bestcdn.vip'
   - '+.bestcem.com'
   - '+.bestcovered.com'
-  - '+.bestdjb.com'
   - '+.bestdo.com'
   - '+.bestdvd.com.tw'
   - '+.bestebookdownload.com'
@@ -10844,6 +10828,7 @@ payload:
   - '+.bithub00.com'
   - '+.bitjia.com'
   - '+.bitky.cc'
+  - '+.bitlib.cc'
   - '+.bitmain.vip'
   - '+.bitmap3d.com'
   - '+.bitmingw.com'
@@ -13010,7 +12995,6 @@ payload:
   - '+.ceibs.edu'
   - '+.ceibsonline.com'
   - '+.ceic.com'
-  - '+.ceiceicei.com'
   - '+.ceicloud.com'
   - '+.ceiea.com'
   - '+.cekid.com'
@@ -13187,7 +13171,6 @@ payload:
   - '+.cgnmc.com'
   - '+.cgnne.com'
   - '+.cgnovo.com'
-  - '+.cgohome.com'
   - '+.cgonet.com'
   - '+.cgown.com'
   - '+.cgpad.com'
@@ -13378,6 +13361,7 @@ payload:
   - '+.chaolen.com'
   - '+.chaoliutai.com'
   - '+.chaolongbus.com'
+  - '+.chaomei.shop'
   - '+.chaomi.cc'
   - '+.chaomo25.com'
   - '+.chaonanrc.com'
@@ -14106,7 +14090,6 @@ payload:
   - '+.chinamags.org'
   - '+.chinamani.com'
   - '+.chinamap.com'
-  - '+.chinamarintec.com'
   - '+.chinamaven.com'
   - '+.chinambn.com'
   - '+.chinamca.com'
@@ -14415,7 +14398,6 @@ payload:
   - '+.chixingkeji.com'
   - '+.chixm.com'
   - '+.chixuyun.com'
-  - '+.chiyuebing.com'
   - '+.chiyuekj.com'
   - '+.chizhouchacha.com'
   - '+.chizhoujob.com'
@@ -14514,6 +14496,7 @@ payload:
   - '+.chrstatic.com'
   - '+.chshcms.com'
   - '+.chshouyu.com'
+  - '+.chspu.com'
   - '+.chsqh.com'
   - '+.chste.com'
   - '+.chtf.com'
@@ -15251,6 +15234,7 @@ payload:
   - '+.cnca.net'
   - '+.cncc.bingj.com'
   - '+.cnccac.com'
+  - '+.cnccar.com'
   - '+.cnccchina.com'
   - '+.cncdn.com'
   - '+.cncelab.com'
@@ -15582,7 +15566,6 @@ payload:
   - '+.cnqc.com'
   - '+.cnqd.net'
   - '+.cnqiang.com'
-  - '+.cnqiaoxiang.com'
   - '+.cnqichun.com'
   - '+.cnqjc.com'
   - '+.cnqjw.com'
@@ -16243,7 +16226,6 @@ payload:
   - '+.cqncnews.com'
   - '+.cqnews.net'
   - '+.cqnhn.com'
-  - '+.cqnu0001.com'
   - '+.cqpa.org'
   - '+.cqpbx.com'
   - '+.cqph.com'
@@ -17353,7 +17335,6 @@ payload:
   - '+.dartou.com'
   - '+.daruan.com'
   - '+.darwinlearns.com'
-  - '+.dashangcloud.com'
   - '+.dashanghaizhuce.com'
   - '+.dashangu.com'
   - '+.dashen520.com'
@@ -18769,7 +18750,6 @@ payload:
   - '+.donglishuzhai.net'
   - '+.dongliw.com'
   - '+.donglizhixin.com'
-  - '+.dongman.fm'
   - '+.dongmansoft.com'
   - '+.dongmanxingkong.com'
   - '+.dongmiban.com'
@@ -19086,9 +19066,9 @@ payload:
   - '+.dsb.ink'
   - '+.dsblog.net'
   - '+.dscbs.com'
-  - '+.dsdbearing.com'
   - '+.dsdf.com'
   - '+.dsdjclub.com'
+  - '+.dseman.com'
   - '+.dsfdc.com'
   - '+.dsfof.com'
   - '+.dshigao.com'
@@ -20486,6 +20466,7 @@ payload:
   - '+.epinduo.com'
   - '+.epinga.com'
   - '+.epinv.com'
+  - '+.epinzu.com'
   - '+.epjike.com'
   - '+.epjob88.com'
   - '+.epkey.com'
@@ -20644,6 +20625,7 @@ payload:
   - '+.esztyg.com'
   - '+.eszwdx.com'
   - '+.eszyb.com'
+  - '+.et-fine.com'
   - '+.et59.com'
   - '+.etao.com'
   - '+.etaog.com'
@@ -20651,7 +20633,6 @@ payload:
   - '+.etccenter.com'
   - '+.etcchebao.com'
   - '+.etcsd.com'
-  - '+.etdown.net'
   - '+.etelux.com'
   - '+.eternalsakura.com'
   - '+.eternalsakura13.com'
@@ -20967,7 +20948,6 @@ payload:
   - '+.eztest.org'
   - '+.eztg.com'
   - '+.eztvnet.com'
-  - '+.ezubao.com'
   - '+.ezucoo.com'
   - '+.ezwan.com'
   - '+.ezwebtest.com'
@@ -21469,7 +21449,6 @@ payload:
   - '+.feiji666nihao.com'
   - '+.feijiu.net'
   - '+.feijizu.com'
-  - '+.feikanu.net'
   - '+.feikongbao.com'
   - '+.feiku.com'
   - '+.feiliao.com'
@@ -21681,6 +21660,7 @@ payload:
   - '+.ffxiv.co'
   - '+.ffxiv.tk'
   - '+.ffxiv.xin'
+  - '+.ffxivhuntcn.com'
   - '+.ffyinxiang.com'
   - '+.fg.cc'
   - '+.fgcndigital.com'
@@ -22609,7 +22589,6 @@ payload:
   - '+.fzdmag.com'
   - '+.fzengine.com'
   - '+.fzf.com'
-  - '+.fzfapp.com'
   - '+.fzfzjx.com'
   - '+.fzg360.com'
   - '+.fzita.com'
@@ -23937,7 +23916,6 @@ payload:
   - '+.govfz.com'
   - '+.govmade.com'
   - '+.gow100.com'
-  - '+.gowa.club'
   - '+.gowan8.com'
   - '+.goweb2.net'
   - '+.goweb3.net'
@@ -24942,7 +24920,6 @@ payload:
   - '+.haibaoyouxi.com'
   - '+.haibeinews.com'
   - '+.haibian.com'
-  - '+.haibog.com'
   - '+.haiboinvest.com'
   - '+.haiboyi.com'
   - '+.haicent.com'
@@ -25290,7 +25267,6 @@ payload:
   - '+.haoduorou.net'
   - '+.haoest.com'
   - '+.haofajz.com'
-  - '+.haofanben.com'
   - '+.haofang.net'
   - '+.haofang5.com'
   - '+.haofangkankan.com'
@@ -25570,7 +25546,6 @@ payload:
   - '+.hbcdc.com'
   - '+.hbcg.cc'
   - '+.hbchen.com'
-  - '+.hbciqtc.com'
   - '+.hbcjh.net'
   - '+.hbcjlq.com'
   - '+.hbcjw.com'
@@ -25924,7 +25899,6 @@ payload:
   - '+.hechengbb.com'
   - '+.heclouds.com'
   - '+.hecoe.com'
-  - '+.heconns.com'
   - '+.hecpharm.com'
   - '+.hedaotang.net'
   - '+.hedgehogrock.com'
@@ -26239,6 +26213,7 @@ payload:
   - '+.hfsid.com'
   - '+.hfssw.com'
   - '+.hfswcz.com'
+  - '+.hfsxs.com'
   - '+.hftfund.com'
   - '+.hftogo.com'
   - '+.hfx.link'
@@ -26410,7 +26385,6 @@ payload:
   - '+.hikvision-jl.com'
   - '+.hikvision.com'
   - '+.hikyun.com'
-  - '+.hilarryxu.com'
   - '+.hiliad.com'
   - '+.hillstonenet.com'
   - '+.hillyton.com'
@@ -27518,6 +27492,7 @@ payload:
   - '+.huangze.net'
   - '+.huanhaoba.com'
   - '+.huanhuanhuishou.com'
+  - '+.huanhuanxin.com'
   - '+.huanhuba.com'
   - '+.huaniaoy.com'
   - '+.huanidc.com'
@@ -27938,6 +27913,7 @@ payload:
   - '+.huo-cun.com'
   - '+.huo119.com'
   - '+.huoban.com'
+  - '+.huobanhuyu.com'
   - '+.huobanjs.com'
   - '+.huobanmall.com'
   - '+.huobanniu.com'
@@ -29071,7 +29047,6 @@ payload:
   - '+.igamecj.com'
   - '+.igao7.com'
   - '+.igaoda.com'
-  - '+.igbox.net'
   - '+.igdzc.com'
   - '+.igea-un.org'
   - '+.igeak.com'
@@ -29446,7 +29421,6 @@ payload:
   - '+.imgscdn.com'
   - '+.imgse.com'
   - '+.imgsha.com'
-  - '+.imgshangman.com'
   - '+.imgsina.com'
   - '+.imgtg.com'
   - '+.imgtu.com'
@@ -29574,6 +29548,7 @@ payload:
   - '+.inc365.com'
   - '+.incake.net'
   - '+.incensechina.com'
+  - '+.incker.com'
   - '+.incloudexpo.com'
   - '+.incoto.com'
   - '+.incsg.com'
@@ -30325,6 +30300,7 @@ payload:
   - '+.iv06.com'
   - '+.ivali.com'
   - '+.ivan.xin'
+  - '+.ivban.com'
   - '+.ivcheng.com'
   - '+.ivemusic.net'
   - '+.ivideostar.com'
@@ -30760,6 +30736,7 @@ payload:
   - '+.jdtjy.com'
   - '+.jdvisa.com'
   - '+.jdw001.com'
+  - '+.jdw2.com'
   - '+.jdwan.com'
   - '+.jdwgame.com'
   - '+.jdwl.com'
@@ -31000,6 +30977,7 @@ payload:
   - '+.jiancai.com'
   - '+.jianchacha.com'
   - '+.jianchihu.net'
+  - '+.jianchuangwang.com'
   - '+.jiandaima.com'
   - '+.jiandan.net'
   - '+.jiandansousuo.com'
@@ -31146,7 +31124,6 @@ payload:
   - '+.jiaotou.org'
   - '+.jiaoyimao.com'
   - '+.jiaoyin.com'
-  - '+.jiaoyitu.com'
   - '+.jiaoyixia.com'
   - '+.jiaoyizhu.com'
   - '+.jiaoyudao.com'
@@ -31685,6 +31662,7 @@ payload:
   - '+.jiudianyuedu.com'
   - '+.jiudingcapital.com'
   - '+.jiudingdalv.com'
+  - '+.jiufawang.com'
   - '+.jiugang.com'
   - '+.jiugangbid.com'
   - '+.jiuguanfm.com'
@@ -33277,7 +33255,6 @@ payload:
   - '+.kdatacenter.com'
   - '+.kdbbx.com'
   - '+.kdd.cc'
-  - '+.kdebell.com'
   - '+.kdfax.com'
   - '+.kdige.com'
   - '+.kdniao.com'
@@ -33991,6 +33968,7 @@ payload:
   - '+.ksyunv5.com'
   - '+.ksyunwaf.com'
   - '+.kszhuanjia.com'
+  - '+.kszpw.com'
   - '+.kt007.com'
   - '+.kt250.com'
   - '+.kt286.com'
@@ -34242,7 +34220,6 @@ payload:
   - '+.kunpo.cc'
   - '+.kunshanidc.com'
   - '+.kuntaihotel.com'
-  - '+.kunx.org'
   - '+.kunyueyun.com'
   - '+.kuo-yi.com'
   - '+.kuodie.com'
@@ -34335,7 +34312,6 @@ payload:
   - '+.kxapp.com'
   - '+.kxapps.com'
   - '+.kxbaidu.com'
-  - '+.kxbld.com'
   - '+.kxbox.com'
   - '+.kxcblog.com'
   - '+.kxceping.com'
@@ -34392,7 +34368,6 @@ payload:
   - '+.kymjs.com'
   - '+.kyoceraconnect.com'
   - '+.kyppt.com'
-  - '+.kyqcfj.com'
   - '+.kytijian.com'
   - '+.kyw4y0s.com'
   - '+.kyxdloan.com'
@@ -34874,7 +34849,6 @@ payload:
   - '+.ldmap.net'
   - '+.ldmnq.com'
   - '+.ldnovel.com'
-  - '+.ldplayer.net'
   - '+.ldpsfa.com'
   - '+.ldqxn.com'
   - '+.ldshj.com'
@@ -35021,7 +34995,6 @@ payload:
   - '+.leiouxiong.com'
   - '+.leipengkai.com'
   - '+.leiphone.com'
-  - '+.leiqunjs.com'
   - '+.leirenw.com'
   - '+.leishen-lidar.com'
   - '+.leishouwin.cc'
@@ -35385,7 +35358,6 @@ payload:
   - '+.liaogu.com'
   - '+.liaogx.com'
   - '+.liaohuqiu.net'
-  - '+.liaoing.com'
   - '+.liaojieju.com'
   - '+.liaokeyu.com'
   - '+.liaokong.com'
@@ -35634,7 +35606,6 @@ payload:
   - '+.lingxi360.com'
   - '+.lingxicloud.com'
   - '+.lingxigames.com'
-  - '+.lingxiu580.com'
   - '+.lingxmall.com'
   - '+.lingxunyun.com'
   - '+.lingyi.org'
@@ -36077,7 +36048,6 @@ payload:
   - '+.lmanmo.com'
   - '+.lmbang.com'
   - '+.lmbest.com'
-  - '+.lmbld.com'
   - '+.lmbus.com'
   - '+.lmdk01.com'
   - '+.lmdouble.com'
@@ -36213,7 +36183,6 @@ payload:
   - '+.loli.wiki'
   - '+.loliloli.moe'
   - '+.loliloli.net'
-  - '+.lolitaf.com'
   - '+.lolitawardrobe.com'
   - '+.loliyun.vip'
   - '+.loljy.com'
@@ -36450,7 +36419,6 @@ payload:
   - '+.lqalm.com'
   - '+.lqbj.com'
   - '+.lqbj66.com'
-  - '+.lqbld.com'
   - '+.lqbyj.com'
   - '+.lqgcb.com'
   - '+.lqgrdj.com'
@@ -36957,7 +36925,6 @@ payload:
   - '+.lzc369.com'
   - '+.lzcbnews.com'
   - '+.lzccb.com'
-  - '+.lzcqt.com'
   - '+.lzeweb.com'
   - '+.lzfcjys.com'
   - '+.lzfjq.com'
@@ -37197,7 +37164,6 @@ payload:
   - '+.maixiaba.com'
   - '+.maixj.net'
   - '+.maixuewen.com'
-  - '+.maixunlei.com'
   - '+.maiya91.com'
   - '+.maiyaole.com'
   - '+.maiymai.com'
@@ -37811,7 +37777,6 @@ payload:
   - '+.meiquankejib.com'
   - '+.meiquankejih.com'
   - '+.meiridazhe.com'
-  - '+.meirikeji.com'
   - '+.meiritv.net'
   - '+.meiriyiwen.com'
   - '+.meirong.net'
@@ -38527,7 +38492,6 @@ payload:
   - '+.mkaliez.com'
   - '+.mkaq.org'
   - '+.mkb0898.com'
-  - '+.mkbld.com'
   - '+.mkf.com'
   - '+.mkjump.com'
   - '+.mklimg.com'
@@ -38824,7 +38788,6 @@ payload:
   - '+.mojieai.com'
   - '+.mojitest.com'
   - '+.mojocube.com'
-  - '+.mojuedu.com'
   - '+.mokahr.com'
   - '+.mokalady.com'
   - '+.mokaoba.com'
@@ -40420,7 +40383,6 @@ payload:
   - '+.nmxc.ltd'
   - '+.nmysyey.com'
   - '+.nmzh.net'
-  - '+.nmzol.com'
   - '+.nn.com'
   - '+.nn12333.com'
   - '+.nncc626.com'
@@ -42629,6 +42591,7 @@ payload:
   - '+.powerskystudio.com'
   - '+.powervision.me'
   - '+.powerxene.com'
+  - '+.powsir.com'
   - '+.powzamedia.com'
   - '+.poxiaotv.com'
   - '+.pozou.com'
@@ -43972,7 +43935,6 @@ payload:
   - '+.qp110.com'
   - '+.qp46.com'
   - '+.qp666.com'
-  - '+.qp832.com'
   - '+.qpaimg.com'
   - '+.qpb187.com'
   - '+.qpdiy.com'
@@ -44060,6 +44022,7 @@ payload:
   - '+.qqppt.com'
   - '+.qqq.tv'
   - '+.qqqiyemail.com'
+  - '+.qqqiyeyouxiang.com'
   - '+.qqqnm.com'
   - '+.qqqqqqqqqqqqq.com'
   - '+.qqread.com'
@@ -44772,6 +44735,7 @@ payload:
   - '+.readpaul.com'
   - '+.readten.net'
   - '+.readu.net'
+  - '+.readwise.com'
   - '+.readwithu.com'
   - '+.ready4go.com'
   - '+.reaer.com'
@@ -45306,7 +45270,6 @@ payload:
   - '+.rrfed.com'
   - '+.rrfmn.com'
   - '+.rrimg.com'
-  - '+.rritcn.com'
   - '+.rrjc.com'
   - '+.rrjump.com'
   - '+.rrkf.com'
@@ -46812,6 +46775,7 @@ payload:
   - '+.shenduliaojie.com'
   - '+.shenduwin10.com'
   - '+.shenduwin8.com'
+  - '+.shenfendaquan.com'
   - '+.shengangzc.com'
   - '+.shengaohua.com'
   - '+.shengbangshenghua.com'
@@ -47329,7 +47293,6 @@ payload:
   - '+.shtdgj.com'
   - '+.shtdsc.com'
   - '+.shtefu.com'
-  - '+.shtennis.org'
   - '+.shtfqx.com'
   - '+.shtgds.com'
   - '+.shtianhe.cc'
@@ -47714,7 +47677,6 @@ payload:
   - '+.simengadx.com'
   - '+.simiam.com'
   - '+.simici3.com'
-  - '+.simida.org'
   - '+.simiki.org'
   - '+.simingcun.net'
   - '+.simingtang.com'
@@ -48625,6 +48587,7 @@ payload:
   - '+.souqupu.com'
   - '+.source3g.com'
   - '+.sourcecodecap.com'
+  - '+.sourcecvs.com'
   - '+.sourcedev.cc'
   - '+.sourcegcdn.com'
   - '+.sourl.co'
@@ -50083,7 +50046,6 @@ payload:
   - '+.taiyangpo.com'
   - '+.taiyiche.com'
   - '+.taiyiplus.com'
-  - '+.taiyougo.net'
   - '+.taiyulink.com'
   - '+.taizibao.com'
   - '+.tajdny.com'
@@ -50831,6 +50793,7 @@ payload:
   - '+.thtfpc.com'
   - '+.thumedialab.com'
   - '+.thundercdn.net'
+  - '+.thundercloud.group'
   - '+.thunderflash.net'
   - '+.thunderobot.com'
   - '+.thunderplaygame.com'
@@ -52121,6 +52084,7 @@ payload:
   - '+.tumanfen.com'
   - '+.tumanyi.com'
   - '+.tumeinv.com'
+  - '+.tumormed.com'
   - '+.tumukeji.com'
   - '+.tumuzhe.com'
   - '+.tuna.wiki'
@@ -52610,6 +52574,7 @@ payload:
   - '+.udpis.com'
   - '+.udrig.com'
   - '+.udsdown.xyz'
+  - '+.udxd.com'
   - '+.uebilling.com'
   - '+.uecook.com'
   - '+.ued163.com'
@@ -53117,6 +53082,7 @@ payload:
   - '+.uuudo.com'
   - '+.uuuo.com'
   - '+.uuutu.com'
+  - '+.uuuxsw.com'
   - '+.uuvisa.com'
   - '+.uuvps.com'
   - '+.uuwego.net'
@@ -53135,7 +53101,6 @@ payload:
   - '+.uvledtek.com'
   - '+.uvov.com'
   - '+.uvu.cc'
-  - '+.uvuvv.com'
   - '+.uw3c.com'
   - '+.uw9.net'
   - '+.uwa4d.com'
@@ -53978,7 +53943,6 @@ payload:
   - '+.walekan.com'
   - '+.wali.com'
   - '+.walibao.com'
-  - '+.walidream.com'
   - '+.walimaker.com'
   - '+.walkerdu.com'
   - '+.walknode.com'
@@ -54065,7 +54029,6 @@ payload:
   - '+.wangdaibus.com'
   - '+.wangdaicaifu.com'
   - '+.wangdaidongfang.com'
-  - '+.wangdaidp.com'
   - '+.wangdaijiamen.com'
   - '+.wangdaijin.com'
   - '+.wangdaileida.com'
@@ -55336,7 +55299,6 @@ payload:
   - '+.whzbtb.com'
   - '+.whzc2008.com'
   - '+.whzdyy.com'
-  - '+.whzglc.com'
   - '+.whzh-cw.com'
   - '+.whzhqsg.com'
   - '+.whzhtd.com'
@@ -56433,7 +56395,6 @@ payload:
   - '+.wx-youyan.net'
   - '+.wx.com'
   - '+.wx135.com'
-  - '+.wx16999.com'
   - '+.wx2h.com'
   - '+.wx2share.com'
   - '+.wx42.com'
@@ -56747,7 +56708,6 @@ payload:
   - '+.xbhz.net'
   - '+.xbiao.com'
   - '+.xbidc.com'
-  - '+.xbingoz.com'
   - '+.xbiquge.cc'
   - '+.xbiquge.com'
   - '+.xbiquge.la'
@@ -57420,7 +57380,6 @@ payload:
   - '+.xiaoshukaihua.com'
   - '+.xiaoshuo.com'
   - '+.xiaoshuo1-sm.com'
-  - '+.xiaoshuo2016.com'
   - '+.xiaoshuo520.com'
   - '+.xiaoshuo530.com'
   - '+.xiaoshuo570.com'
@@ -58486,7 +58445,6 @@ payload:
   - '+.xqnmz.com'
   - '+.xqsbw.com'
   - '+.xqship.com'
-  - '+.xqspx.com'
   - '+.xqtesting.com'
   - '+.xqwggg.com'
   - '+.xqwww.com'
@@ -58625,7 +58583,6 @@ payload:
   - '+.xuandui.me'
   - '+.xuanfengge.com'
   - '+.xuanfengkeji.com'
-  - '+.xuanfuwang.com'
   - '+.xuanhuafb.com'
   - '+.xuanhuange.com'
   - '+.xuanhuange.net'
@@ -59373,6 +59330,7 @@ payload:
   - '+.yaozhixiang.com'
   - '+.yaozhizhu.com'
   - '+.yaozs.com'
+  - '+.yaozui.com'
   - '+.yareiot.com'
   - '+.yaristyle.com'
   - '+.yarnn.com'
@@ -59507,7 +59465,6 @@ payload:
   - '+.ydl.wang'
   - '+.ydlbk.com'
   - '+.ydlcdn.com'
-  - '+.ydm88.com'
   - '+.ydmel.com'
   - '+.ydmeng.com'
   - '+.ydmob.com'
@@ -59719,6 +59676,7 @@ payload:
   - '+.ygread.com'
   - '+.ygsdmedia.com'
   - '+.ygshangjie.com'
+  - '+.ygshu.com'
   - '+.ygsoft.com'
   - '+.ygtcpa.com'
   - '+.ygwenxue.com'
@@ -60487,9 +60445,6 @@ payload:
   - '+.ymraaa.com'
   - '+.ymrcw.vip'
   - '+.ymsteam.com'
-  - '+.ymsxq002.pw'
-  - '+.ymsxq003.pw'
-  - '+.ymsxq004.pw'
   - '+.ymsxq007.pw'
   - '+.ymsxq009.pw'
   - '+.ymt.com'
@@ -60534,7 +60489,6 @@ payload:
   - '+.yni84.com'
   - '+.ynikon.com'
   - '+.yninfo.com'
-  - '+.ynit580.com'
   - '+.ynkcfc.com'
   - '+.ynkmjj.com'
   - '+.ynlibs.com'
@@ -61354,7 +61308,6 @@ payload:
   - '+.yuetx.cc'
   - '+.yueweimusic.com'
   - '+.yuewen.com'
-  - '+.yuexianck.com'
   - '+.yuexing.com'
   - '+.yuexingfurniture.com'
   - '+.yuexinli.com'
@@ -61579,7 +61532,6 @@ payload:
   - '+.yunmayi.com'
   - '+.yunmd.net'
   - '+.yunmeipai.com'
-  - '+.yunmengnet.com'
   - '+.yunmiao.co'
   - '+.yunmishu365.com'
   - '+.yunmoseo.com'
@@ -62421,7 +62373,6 @@ payload:
   - '+.zgdwzp.com'
   - '+.zgdxhbkf.com'
   - '+.zgdydyxh.com'
-  - '+.zgdzqw.com'
   - '+.zgeci.com'
   - '+.zgfwgj.com'
   - '+.zgfxnews.com'
@@ -62650,6 +62601,7 @@ payload:
   - '+.zhangyoubao.com'
   - '+.zhangyoushijie.com'
   - '+.zhangyu.com'
+  - '+.zhangyu39.com'
   - '+.zhangyue.com'
   - '+.zhangyue.net'
   - '+.zhangyue01.com'
@@ -63513,7 +63465,6 @@ payload:
   - '+.zhwdw.com'
   - '+.zhwenku.com'
   - '+.zhwenxue.com'
-  - '+.zhwlgzs.com'
   - '+.zhx-mall.com'
   - '+.zhxfei.com'
   - '+.zhxinuser.com'
@@ -63661,7 +63612,6 @@ payload:
   - '+.zixigua.com'
   - '+.zixijiaoshi.com'
   - '+.zixike.cc'
-  - '+.zixuedao.com'
   - '+.zixuejie.com'
   - '+.zixuekaoshi.net'
   - '+.zixuephp.net'
@@ -64114,6 +64064,7 @@ payload:
   - '+.zoucheng.cc'
   - '+.zoucz.com'
   - '+.zoues.com'
+  - '+.zouhong365.com'
   - '+.zoukankan.com'
   - '+.zoular.com'
   - '+.zoutu.com'
