--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1187,6 +1187,7 @@ payload:
   - '+.13973.com'
   - '+.139cm.com'
   - '+.139down.com'
+  - '+.139erp.com'
   - '+.139life.com'
   - '+.139shop.com'
   - '+.139talk.com'
@@ -1779,7 +1780,6 @@ payload:
   - '+.1iptv.com'
   - '+.1j1x.net'
   - '+.1jduan.com'
-  - '+.1jiaa.com'
   - '+.1jiajie.com'
   - '+.1jian.fun'
   - '+.1juzi.com'
@@ -2102,7 +2102,6 @@ payload:
   - '+.22shop.com'
   - '+.22tianbo.com'
   - '+.22vd.com'
-  - '+.22zryx.com'
   - '+.22zw.com'
   - '+.22zy.net'
   - '+.2300sjz.com'
@@ -2159,7 +2158,6 @@ payload:
   - '+.23bei.com'
   - '+.23book.com'
   - '+.23class.com'
-  - '+.23code.com'
   - '+.23cpc.com'
   - '+.23do.com'
   - '+.23du.com'
@@ -2602,7 +2600,6 @@ payload:
   - '+.3332235.com'
   - '+.3332358.com'
   - '+.3332600.com'
-  - '+.33331.com'
   - '+.333333.com'
   - '+.3335665.com'
   - '+.33360.com'
@@ -3488,7 +3485,6 @@ payload:
   - '+.4everdns.com'
   - '+.4f89.com'
   - '+.4fang.net'
-  - '+.4fcom.net'
   - '+.4ggogo.com'
   - '+.4gh6.com'
   - '+.4glte.org'
@@ -4200,7 +4196,6 @@ payload:
   - '+.520jiabo.com'
   - '+.520jita.com'
   - '+.520lbl.com'
-  - '+.520ldf.com'
   - '+.520link.com'
   - '+.520love520.com'
   - '+.520mingmei.com'
@@ -4572,7 +4567,6 @@ payload:
   - '+.55wz.com'
   - '+.55xiazai.com'
   - '+.55y5.com'
-  - '+.55zm.com'
   - '+.56-7.com'
   - '+.56.com'
   - '+.560.im'
@@ -4638,7 +4632,6 @@ payload:
   - '+.571400.net'
   - '+.571free.com'
   - '+.571xz.com'
-  - '+.5721.net'
   - '+.5755.com'
   - '+.576.com'
   - '+.57608.com'
@@ -5270,6 +5263,7 @@ payload:
   - '+.6868.com'
   - '+.6868shop.com'
   - '+.688799a.com'
+  - '+.688xc.com'
   - '+.6899wan.com'
   - '+.68eg.com'
   - '+.68gainian.com'
@@ -5396,7 +5390,6 @@ payload:
   - '+.6yyy7.com'
   - '+.6z6z.com'
   - '+.6zu.com'
-  - '+.7-hotel.com'
   - '+.7-vk.com'
   - '+.7-wx.com'
   - '+.70.com'
@@ -5662,7 +5655,6 @@ payload:
   - '+.7958.net'
   - '+.7979u.com'
   - '+.797sun.com'
-  - '+.797xj.com'
   - '+.79856.gs'
   - '+.7988wan.com'
   - '+.798com.com'
@@ -5809,7 +5801,6 @@ payload:
   - '+.80.hk'
   - '+.80000.cc'
   - '+.800020308.com'
-  - '+.8000ad.com'
   - '+.800423.com'
   - '+.800535.com'
   - '+.8006506.com'
@@ -5898,7 +5889,6 @@ payload:
   - '+.817711.com'
   - '+.818.com'
   - '+.818371.com'
-  - '+.818537.com'
   - '+.818it.com'
   - '+.818ps.com'
   - '+.818rmb.com'
@@ -9408,7 +9398,6 @@ payload:
   - '+.b5m.com'
   - '+.b612.me'
   - '+.b612kaji.com'
-  - '+.b6ss.com'
   - '+.b780.com'
   - '+.b7l.cc'
   - '+.b8yx.com'
@@ -10249,7 +10238,6 @@ payload:
   - '+.beijingrc.net'
   - '+.beijingrenyi.com'
   - '+.beijingsheying.net'
-  - '+.beijingtongxin.com'
   - '+.beijingtoon.com'
   - '+.beijingwenshendian.com'
   - '+.beijingxinzhuoyue.com'
@@ -10880,7 +10868,6 @@ payload:
   - '+.biymx.com'
   - '+.biyong007.com'
   - '+.biyou.tech'
-  - '+.biyoujz.com'
   - '+.biyuwu.cc'
   - '+.biz-east.com'
   - '+.biz178.com'
@@ -10959,7 +10946,6 @@ payload:
   - '+.bjcshy.com'
   - '+.bjcsyg.com'
   - '+.bjcta.net'
-  - '+.bjcurio.com'
   - '+.bjcxdf.com'
   - '+.bjcyzg.com'
   - '+.bjczxt.com'
@@ -13092,7 +13078,6 @@ payload:
   - '+.ceunion.com'
   - '+.ceve-market.org'
   - '+.cevsn.com'
-  - '+.cezxda.com'
   - '+.cf-china.info'
   - '+.cf-ns.com'
   - '+.cf-ns.net'
@@ -13367,7 +13352,6 @@ payload:
   - '+.chaolady.com'
   - '+.chaolean.com'
   - '+.chaolen.com'
-  - '+.chaoliutai.com'
   - '+.chaolongbus.com'
   - '+.chaomei.shop'
   - '+.chaomi.cc'
@@ -13668,6 +13652,7 @@ payload:
   - '+.chillyroom.com'
   - '+.chilunyc.com'
   - '+.chiluyingxiao.com'
+  - '+.chimaoyoupin.com'
   - '+.chimatong.com'
   - '+.chimee.org'
   - '+.chimelong.com'
@@ -14721,6 +14706,7 @@ payload:
   - '+.ciif-expo.com'
   - '+.ciiip.com'
   - '+.ciimg.com'
+  - '+.ciiplat.com'
   - '+.ciji234.com'
   - '+.cijilu.com'
   - '+.ciku5.com'
@@ -15110,7 +15096,6 @@ payload:
   - '+.cmsfg.com'
   - '+.cmsjournal.net'
   - '+.cmskcrm.com'
-  - '+.cmsky.com'
   - '+.cmsn.biz'
   - '+.cmstop.com'
   - '+.cmt178.com'
@@ -17493,6 +17478,7 @@ payload:
   - '+.dazhongbanben.com'
   - '+.dazhonghr.com'
   - '+.dazhoudz8.com'
+  - '+.dazhoumzj.com'
   - '+.dazhoushan.com'
   - '+.dazhuangwang.com'
   - '+.dazhuanlan.com'
@@ -18020,6 +18006,7 @@ payload:
   - '+.dianbucuo.com'
   - '+.diancaijun.com'
   - '+.dianchacha.com'
+  - '+.dianchouapp.com'
   - '+.diandanbao.com'
   - '+.diandao.org'
   - '+.diandaxia.com'
@@ -18253,6 +18240,7 @@ payload:
   - '+.dinghaiec.com'
   - '+.dinghuaren.com'
   - '+.dinghuihuojia.com'
+  - '+.dinghuo123.com'
   - '+.dinghuoche.com'
   - '+.dinghuovip.com'
   - '+.dingip.com'
@@ -19084,6 +19072,8 @@ payload:
   - '+.dshrc.com'
   - '+.dskb.co'
   - '+.dskystudio.com'
+  - '+.dslbuy.com'
+  - '+.dslyy.com'
   - '+.dsmyiyuan.com'
   - '+.dsmzyy.com'
   - '+.dsmzyy120.com'
@@ -19472,7 +19462,6 @@ payload:
   - '+.dytg389.xyz'
   - '+.dytg390.xyz'
   - '+.dytg391.xyz'
-  - '+.dytt.net'
   - '+.dytt789.com'
   - '+.dytt7899.com'
   - '+.dytt8.com'
@@ -20105,7 +20094,6 @@ payload:
   - '+.eflybird.com'
   - '+.eflycloud.com'
   - '+.eflydns.net'
-  - '+.efmac.org'
   - '+.efnchina.com'
   - '+.efotile.com'
   - '+.efount.com'
@@ -20240,6 +20228,7 @@ payload:
   - '+.ekesoo.com'
   - '+.eketong.com'
   - '+.ekuaibao.com'
+  - '+.ekweixin.com'
   - '+.elabinfo.com'
   - '+.elane.com'
   - '+.elanso.com'
@@ -21914,6 +21903,7 @@ payload:
   - '+.flacro.me'
   - '+.flamesky.org'
   - '+.flamingcold.com'
+  - '+.flan1688.com'
   - '+.flaredup.com'
   - '+.flash8.net'
   - '+.flash8f.com'
@@ -22310,6 +22300,7 @@ payload:
   - '+.fswl66.com'
   - '+.fsxchina.com'
   - '+.fsxdwy.com'
+  - '+.fsxshjz.com'
   - '+.fsxsj.net'
   - '+.fsymltc.com'
   - '+.fsyule.net'
@@ -23452,7 +23443,6 @@ payload:
   - '+.giveme5.cc'
   - '+.giyu8.com'
   - '+.gizwits.com'
-  - '+.gj.app'
   - '+.gj515.com'
   - '+.gjalk.com'
   - '+.gjb9001b.com'
@@ -24571,6 +24561,7 @@ payload:
   - '+.gxxiaotutu.com'
   - '+.gxxmyjs.com'
   - '+.gxycwy.com'
+  - '+.gxyljf.com'
   - '+.gxylxtc.com'
   - '+.gxyxlx.com'
   - '+.gxzjy.com'
@@ -25086,6 +25077,7 @@ payload:
   - '+.halead.com'
   - '+.halffashion.com'
   - '+.halfrost.com'
+  - '+.haligenjudi.com'
   - '+.halixun.com'
   - '+.halloar.com'
   - '+.hallofix.com'
@@ -27443,7 +27435,6 @@ payload:
   - '+.huakai.me'
   - '+.huake-weixin.com'
   - '+.huake360.com'
-  - '+.huakebosi.com'
   - '+.huakeyun.com'
   - '+.hualady.com'
   - '+.hualala.com'
@@ -27570,6 +27561,7 @@ payload:
   - '+.huashitong.net'
   - '+.huashphoto.com'
   - '+.huashu-inc.com'
+  - '+.huasimtour.com'
   - '+.huasyun.com'
   - '+.huatai-pb.com'
   - '+.huatengsci.com'
@@ -27792,6 +27784,7 @@ payload:
   - '+.huirixiao.com'
   - '+.huishangbao.com'
   - '+.huishangol.com'
+  - '+.huishanjianchayuan.com'
   - '+.huishenghuo888888.com'
   - '+.huishengqianzhushou.com'
   - '+.huishoubao.com'
@@ -28133,7 +28126,6 @@ payload:
   - '+.hx36.net'
   - '+.hx8886.com'
   - '+.hx99.net'
-  - '+.hx9999.com'
   - '+.hxage.com'
   - '+.hxbdf120.com'
   - '+.hxbdxled.com'
@@ -28171,7 +28163,6 @@ payload:
   - '+.hxqcjt.com'
   - '+.hxqnj.org'
   - '+.hxrc.com'
-  - '+.hxs168.com'
   - '+.hxsd.com'
   - '+.hxsd.tv'
   - '+.hxsec.com'
@@ -30663,7 +30654,6 @@ payload:
   - '+.jcsb.com'
   - '+.jcsfs.com'
   - '+.jcsjt.com'
-  - '+.jcssyxh.com'
   - '+.jctmj.net'
   - '+.jctrans.com'
   - '+.jctuku.com'
@@ -30671,6 +30661,7 @@ payload:
   - '+.jcwcn.com'
   - '+.jcwgk.com'
   - '+.jcwxiao.com'
+  - '+.jcyai.com'
   - '+.jcyes.com'
   - '+.jcyunk2.com'
   - '+.jcyx2019.com'
@@ -32522,7 +32513,6 @@ payload:
   - '+.julihun.com'
   - '+.julinghu.com'
   - '+.julive.com'
-  - '+.julur.com'
   - '+.julyclyde.org'
   - '+.julydate.com'
   - '+.julyedu.com'
@@ -32664,7 +32654,6 @@ payload:
   - '+.juxin123.com'
   - '+.juxinfu.com'
   - '+.juxing-edu.com'
-  - '+.juxingyi.com'
   - '+.juxinhuizhi.com'
   - '+.juyanbao.com'
   - '+.juyouqu.com'
@@ -32898,9 +32887,9 @@ payload:
   - '+.jznqp.net'
   - '+.jznyjt.com'
   - '+.jzongguan.com'
+  - '+.jzqlyptall.com'
   - '+.jzrb.com'
   - '+.jzrc.net'
-  - '+.jzrsrc.com'
   - '+.jzsadlkfadf.com'
   - '+.jzsc.net'
   - '+.jzsc8.com'
@@ -32954,7 +32943,6 @@ payload:
   - '+.k6uk.com'
   - '+.k73.com'
   - '+.k780.com'
-  - '+.k7kf.com'
   - '+.k8008.com'
   - '+.k8ba.com'
   - '+.k8dream.com'
@@ -33225,7 +33213,6 @@ payload:
   - '+.katyusha.net'
   - '+.kaven.xyz'
   - '+.kawahdinosaur.com'
-  - '+.kayege.info'
   - '+.kaytrip.com'
   - '+.kaytune.com'
   - '+.kazakcnr.com'
@@ -36118,7 +36105,6 @@ payload:
   - '+.lntvu.com'
   - '+.lntycp.com'
   - '+.lnvsystem.com'
-  - '+.lnyhrlzy.com'
   - '+.lnyyzyxy.com'
   - '+.lnzikao.com'
   - '+.lnzsks.com'
@@ -39143,7 +39129,6 @@ payload:
   - '+.mtoou.info'
   - '+.mtr8.com'
   - '+.mtrendgroup.com'
-  - '+.mtscj.com'
   - '+.mttsq.com'
   - '+.mtty.com'
   - '+.mtunique.com'
@@ -40726,7 +40711,6 @@ payload:
   - '+.nxyqs.com'
   - '+.ny-yy.com'
   - '+.ny83.com'
-  - '+.ny8z.net'
   - '+.ny913.com'
   - '+.nyaacat.com'
   - '+.nyasama.com'
@@ -41430,7 +41414,6 @@ payload:
   - '+.oushangstyle.com'
   - '+.oushinet.com'
   - '+.oushivoyages.com'
-  - '+.ousns.net'
   - '+.ousweixin.com'
   - '+.outlets365.com'
   - '+.outletscn.com'
@@ -41663,7 +41646,6 @@ payload:
   - '+.panyouwl.com'
   - '+.panyun.com'
   - '+.paoao.net'
-  - '+.paobuqu.com'
   - '+.paochefang.com'
   - '+.paodoo.com'
   - '+.paofugroup.com'
@@ -42698,6 +42680,7 @@ payload:
   - '+.ppvi.net'
   - '+.ppvod.net'
   - '+.ppwan.com'
+  - '+.ppwang.com'
   - '+.ppwwyyxx.com'
   - '+.ppx520.com'
   - '+.ppxclub.com'
@@ -43123,7 +43106,6 @@ payload:
   - '+.qdjiejie.com'
   - '+.qdjimo.com'
   - '+.qdjjwsjf.com'
-  - '+.qdjnbgjj.com'
   - '+.qdjxhz.com'
   - '+.qdkebang.com'
   - '+.qdkingst.com'
@@ -43519,7 +43501,6 @@ payload:
   - '+.qilanxiaozhu.net'
   - '+.qilecms.com'
   - '+.qiliaokj.com'
-  - '+.qilinchess.com'
   - '+.qilindao.com'
   - '+.qiling.org'
   - '+.qilingames.com'
@@ -43591,6 +43572,7 @@ payload:
   - '+.qingfanqie.com'
   - '+.qingflow.com'
   - '+.qingfo.com'
+  - '+.qingful.com'
   - '+.qingfuwucdn.net'
   - '+.qingfuyun.com'
   - '+.qinggl.com'
@@ -44020,7 +44002,6 @@ payload:
   - '+.qqkw.net'
   - '+.qqleju.com'
   - '+.qqlin.net'
-  - '+.qqlyjt.com'
   - '+.qqm98.com'
   - '+.qqma.com'
   - '+.qqmail.com'
@@ -45154,7 +45135,6 @@ payload:
   - '+.rockyaero.com'
   - '+.rockyenglish.com'
   - '+.roclee.com'
-  - '+.roddypy.com'
   - '+.roffar.com'
   - '+.rohm-chip.com'
   - '+.roidmi.com'
@@ -45167,6 +45147,7 @@ payload:
   - '+.rollupjs.com'
   - '+.rom100.com'
   - '+.rom333.com'
+  - '+.romens.cloud'
   - '+.romhui.com'
   - '+.romjd.com'
   - '+.romleyuan.com'
@@ -45708,7 +45689,6 @@ payload:
   - '+.sankoup1.com'
   - '+.sankuai.com'
   - '+.sanlan123.com'
-  - '+.sanlangwang.ink'
   - '+.sanliwenhua.com'
   - '+.sanpowergroup.com'
   - '+.sanpuzhiyao.com'
@@ -46088,7 +46068,6 @@ payload:
   - '+.sdongpo.com'
   - '+.sdoprofile.com'
   - '+.sdpku.com'
-  - '+.sdpmcnc.com'
   - '+.sdqifushebei.com'
   - '+.sdqlkr.com'
   - '+.sdqmy.com'
@@ -46757,7 +46736,6 @@ payload:
   - '+.shedunews.com'
   - '+.sheencity.com'
   - '+.sheepmats.com'
-  - '+.sheepsun.com'
   - '+.sheetgit.com'
   - '+.sheinet.com'
   - '+.sheizhiwo.com'
@@ -48716,7 +48694,6 @@ payload:
   - '+.spirithy.com'
   - '+.spischolar.com'
   - '+.spjxcn.com'
-  - '+.spl4cn.com'
   - '+.splaybow.com'
   - '+.splayer.org'
   - '+.splayer.work'
@@ -48902,6 +48879,7 @@ payload:
   - '+.standardshop.net'
   - '+.star-village-ent.com'
   - '+.star1024.com'
+  - '+.star365.com'
   - '+.star7game.com'
   - '+.star7th.com'
   - '+.starbaysoft.com'
@@ -49141,7 +49119,6 @@ payload:
   - '+.sufangxu.com'
   - '+.sufeinet.com'
   - '+.sufont.com'
-  - '+.sugarcanetechnology.com'
   - '+.sugarforex.com'
   - '+.sugarguo.com'
   - '+.sugarle.com'
@@ -50237,7 +50214,6 @@ payload:
   - '+.taohui.pub'
   - '+.taohuichang.com'
   - '+.taohuizhou.com'
-  - '+.taohuochang.com'
   - '+.taohuren.com'
   - '+.taoibao.net'
   - '+.taojiji.com'
@@ -50654,7 +50630,6 @@ payload:
   - '+.testerlife.com'
   - '+.testict.com'
   - '+.testingpai.com'
-  - '+.testip.xyz'
   - '+.testiu.com'
   - '+.testjj.com'
   - '+.testlrq.com'
@@ -50942,6 +50917,7 @@ payload:
   - '+.tianxiawangxiao.com'
   - '+.tianxiaxiao.net'
   - '+.tianxiaxinyong.com'
+  - '+.tianxin100.vip'
   - '+.tianxinfan.com'
   - '+.tianxing.com'
   - '+.tianxinsuye.com'
@@ -51474,7 +51450,6 @@ payload:
   - '+.top'
   - '+.top100summit.com'
   - '+.top147.com'
-  - '+.top1food.com'
   - '+.top263.net'
   - '+.top2fun.com'
   - '+.top3456.com'
@@ -51881,7 +51856,6 @@ payload:
   - '+.ttcad.com'
   - '+.ttdailynews.com'
   - '+.ttdown.com'
-  - '+.ttdtweb.com'
   - '+.ttechhk.com'
   - '+.ttfly.com'
   - '+.ttgjx.com'
@@ -52236,7 +52210,6 @@ payload:
   - '+.tvccc.org'
   - '+.tventry.com'
   - '+.tvfanqie.com'
-  - '+.tvflnet.com'
   - '+.tvfuwu.com'
   - '+.tvguo.tv'
   - '+.tvhome.com'
@@ -53930,7 +53903,6 @@ payload:
   - '+.waig8.com'
   - '+.waigame.com'
   - '+.waigf.com'
-  - '+.waiguaw.com'
   - '+.waiguofang.com'
   - '+.waihui888.com'
   - '+.waihuigu.net'
@@ -54082,7 +54054,6 @@ payload:
   - '+.wangle.com'
   - '+.wanglibao.com'
   - '+.wanglu.info'
-  - '+.wangluoliuxing.com'
   - '+.wanglutech.com'
   - '+.wanglv.com'
   - '+.wanglv.vip'
@@ -54578,7 +54549,6 @@ payload:
   - '+.weigongju.org'
   - '+.weigongxue.com'
   - '+.weihai.tv'
-  - '+.weihai6.com'
   - '+.weihaicollege.com'
   - '+.weihaipoly.com'
   - '+.weihanli.xyz'
@@ -55204,6 +55174,7 @@ payload:
   - '+.whmnx.com'
   - '+.whmoocs.com'
   - '+.whmoto.com'
+  - '+.whmxrj.com'
   - '+.whmylike.cc'
   - '+.whmylikekq.com'
   - '+.whnfc.com'
@@ -55729,6 +55700,7 @@ payload:
   - '+.woaide.com'
   - '+.woaidu.org'
   - '+.woaifanyi.com'
+  - '+.woaihaoyouxi.com'
   - '+.woaihuahua.com'
   - '+.woaijiba.com'
   - '+.woaipj.com'
@@ -56678,6 +56650,7 @@ payload:
   - '+.xasff.com'
   - '+.xasgxy.com'
   - '+.xashangwang.com'
+  - '+.xashzhjz.com'
   - '+.xasimonds.com'
   - '+.xasixiongdi.com'
   - '+.xasqw.com'
@@ -56725,7 +56698,6 @@ payload:
   - '+.xbfnet.com'
   - '+.xbfzb.com'
   - '+.xbhb.net'
-  - '+.xbhub.com'
   - '+.xbhy.com'
   - '+.xbhz.net'
   - '+.xbiao.com'
@@ -56761,6 +56733,7 @@ payload:
   - '+.xbxxb.com'
   - '+.xbxxz.com'
   - '+.xbzlapp.com'
+  - '+.xc2500.com'
   - '+.xc829.com'
   - '+.xc940.com'
   - '+.xcabc.com'
@@ -58692,7 +58665,6 @@ payload:
   - '+.xuenb.com'
   - '+.xuepaijie.com'
   - '+.xuepojie.com'
-  - '+.xueqinji.com'
   - '+.xueqiu.com'
   - '+.xueqiu360.com'
   - '+.xuerentang.net'
@@ -58748,7 +58720,6 @@ payload:
   - '+.xuezizhai.com'
   - '+.xugaoyang.com'
   - '+.xugucn.com'
-  - '+.xuhangzj.com'
   - '+.xuheen.com'
   - '+.xuhehuan.com'
   - '+.xuhot.com'
@@ -59127,7 +59098,6 @@ payload:
   - '+.y2002.com'
   - '+.y261.com'
   - '+.y4dg.cc'
-  - '+.y4dg.com'
   - '+.y500.me'
   - '+.y5663.com'
   - '+.y6162.com'
@@ -59503,7 +59473,6 @@ payload:
   - '+.ydtbl.com'
   - '+.ydtnotary.com'
   - '+.ydtongcheng.com'
-  - '+.ydtun.com'
   - '+.ydtykj.net'
   - '+.ydu6.com'
   - '+.yduav.com'
@@ -59836,7 +59805,6 @@ payload:
   - '+.yifansuo.com'
   - '+.yifatong.com'
   - '+.yifei.space'
-  - '+.yifeisoft.com'
   - '+.yifen.com'
   - '+.yifeng-mover.com'
   - '+.yifeng.com'
@@ -60179,6 +60147,7 @@ payload:
   - '+.yishion.com'
   - '+.yishion.net'
   - '+.yishixue.com'
+  - '+.yishouapp.com'
   - '+.yishu.com'
   - '+.yishu168.com'
   - '+.yishujie.com'
@@ -60474,6 +60443,7 @@ payload:
   - '+.ymtjfxly.com'
   - '+.ymtmt.com'
   - '+.ymvkt.com'
+  - '+.ymxinke.com'
   - '+.ymxinxi.com'
   - '+.ymxxs.com'
   - '+.ymyun.com'
@@ -60778,7 +60748,6 @@ payload:
   - '+.youmew.com'
   - '+.youmi.net'
   - '+.youmiad.com'
-  - '+.youmingdifu.com'
   - '+.youmingdot.com'
   - '+.youminonline.com'
   - '+.youmobi.com'
@@ -61095,7 +61064,6 @@ payload:
   - '+.ysjf.com'
   - '+.ysjgames.com'
   - '+.ysjhchina.net'
-  - '+.ysjkgl.com'
   - '+.ysjpin.com'
   - '+.yskjzj.com'
   - '+.yslcw.com'
@@ -61156,7 +61124,6 @@ payload:
   - '+.ytghnb.com'
   - '+.ythouse.com'
   - '+.ytjcpj.com'
-  - '+.ytkaituo.com'
   - '+.ytlh120.com'
   - '+.ytlvbao.com'
   - '+.ytmedia.tv'
@@ -61713,7 +61680,6 @@ payload:
   - '+.yuwennews.com'
   - '+.yuwenxiandaihua.com'
   - '+.yuxianall.com'
-  - '+.yuxiangrc.com'
   - '+.yuxiaor.com'
   - '+.yuxinews.com'
   - '+.yuxingqiu.com'
@@ -61826,6 +61792,7 @@ payload:
   - '+.yxinbao.com'
   - '+.yxit.net'
   - '+.yxixy.com'
+  - '+.yxjcy.xyz'
   - '+.yxjedu02.com'
   - '+.yxjia.com'
   - '+.yxkfw.com'
@@ -62785,7 +62752,6 @@ payload:
   - '+.zhengdabm.com'
   - '+.zhengdaotang.com'
   - '+.zhengdichaiqian.com'
-  - '+.zhengding.cc'
   - '+.zhengdongzulin.com'
   - '+.zhengfenduojin.com'
   - '+.zhengguzhishen.com'
@@ -64350,7 +64316,6 @@ payload:
   - '+.zuimeiqidai.com'
   - '+.zuimeitianqi.com'
   - '+.zuimeix.com'
-  - '+.zuiniuwang.com'
   - '+.zuiqiangyingyu.net'
   - '+.zuirede.com'
   - '+.zuishidai.com'
@@ -64716,7 +64681,6 @@ payload:
   - '+.zzt9.com'
   - '+.zztline.com'
   - '+.zztongyun.com'
-  - '+.zztoutiao.net'
   - '+.zztxkj.com'
   - '+.zztyscl.com'
   - '+.zzvips.com'
