--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1129,7 +1129,6 @@ payload:
   - '+.1314study.com'
   - '+.1314wallet.com'
   - '+.1314zf.com'
-  - '+.1317w.com'
   - '+.131cc.com'
   - '+.131vip1.com'
   - '+.131w.tv'
@@ -2364,7 +2363,6 @@ payload:
   - '+.2df.me'
   - '+.2dfire.com'
   - '+.2dfire.info'
-  - '+.2di.cc'
   - '+.2dph.com'
   - '+.2du.net'
   - '+.2dyou.com'
@@ -5832,6 +5830,7 @@ payload:
   - '+.8090.com'
   - '+.8090.pk'
   - '+.8090120.com'
+  - '+.809090.xyz'
   - '+.8090app.com'
   - '+.8090cdn.com'
   - '+.8090mt.com'
@@ -7261,7 +7260,6 @@ payload:
   - '+.acnow.net'
   - '+.aco-musical.com'
   - '+.aconf.org'
-  - '+.aconline.com'
   - '+.acoolread.com'
   - '+.acpf-cn.org'
   - '+.acq42.com'
@@ -8661,6 +8659,7 @@ payload:
   - '+.aoofu.com'
   - '+.aoogee.com'
   - '+.aoomoo.com'
+  - '+.aopayun.com'
   - '+.aoratec.com'
   - '+.aoscdn.com'
   - '+.aosens.com'
@@ -9079,6 +9078,7 @@ payload:
   - '+.aspxhtml.com'
   - '+.asrmicro.com'
   - '+.assbbs.com'
+  - '+.asset.msi.com'
   - '+.assets-global.viveport.com'
   - '+.assets.analog.com'
   - '+.assets.uxengine.net'
@@ -9395,7 +9395,6 @@ payload:
   - '+.b5m.com'
   - '+.b612.me'
   - '+.b612kaji.com'
-  - '+.b780.com'
   - '+.b7l.cc'
   - '+.b8yx.com'
   - '+.ba-li.com'
@@ -12630,7 +12629,6 @@ payload:
   - '+.ccpithebei.com'
   - '+.ccpithn.org'
   - '+.ccpithrb.org'
-  - '+.ccpithz.org'
   - '+.ccpitjinan.org'
   - '+.ccpitjs.org'
   - '+.ccpitlight.org'
@@ -15711,6 +15709,7 @@ payload:
   - '+.cnzyao.com'
   - '+.cnzz.com'
   - '+.cnzz.net'
+  - '+.cnzz07.com'
   - '+.cnzznn.com'
   - '+.cnzznz.com'
   - '+.co-effort.com'
@@ -19446,7 +19445,6 @@ payload:
   - '+.dyjqd.com'
   - '+.dykj.site'
   - '+.dylc.com'
-  - '+.dylxhm.com'
   - '+.dyly.com'
   - '+.dyonr.com'
   - '+.dyqc.com'
@@ -21325,7 +21323,6 @@ payload:
   - '+.fc0531.com'
   - '+.fc0633.com'
   - '+.fc12319.com'
-  - '+.fc2.red'
   - '+.fc571.com'
   - '+.fc811.com'
   - '+.fcachinagsdp.com'
@@ -22269,6 +22266,7 @@ payload:
   - '+.fsfund.com'
   - '+.fsgejian.com'
   - '+.fsggb.com'
+  - '+.fsghgt.com'
   - '+.fsgplus.com'
   - '+.fsgzhg.com'
   - '+.fshd.com'
@@ -22916,6 +22914,7 @@ payload:
   - '+.gatewang.com'
   - '+.gather-dns.com'
   - '+.gathernames.com'
+  - '+.gatobuy.com'
   - '+.gaussianoptics.com'
   - '+.gavindesign.com'
   - '+.gaxrmyy.com'
@@ -31934,7 +31933,6 @@ payload:
   - '+.jmd-china.com'
   - '+.jmdedu.com'
   - '+.jmeii.com'
-  - '+.jmfans.com'
   - '+.jmgle.com'
   - '+.jmgo.com'
   - '+.jmhapp.com'
@@ -37808,7 +37806,6 @@ payload:
   - '+.meitianhui.com'
   - '+.meitibijia.com'
   - '+.meitu.com'
-  - '+.meitu.store'
   - '+.meituan.com'
   - '+.meituan.net'
   - '+.meitubase.com'
@@ -42301,7 +42298,6 @@ payload:
   - '+.piqs.com'
   - '+.piscesys.com'
   - '+.pisx.com'
-  - '+.piworker.com'
   - '+.pixelauth.com'
   - '+.pixhey.com'
   - '+.pixivacg.com'
@@ -42339,7 +42335,6 @@ payload:
   - '+.pkbkok.com'
   - '+.pkdyplayer.com'
   - '+.pkfj.xyz'
-  - '+.pkgklk.com'
   - '+.pkm360.com'
   - '+.pkmmo.com'
   - '+.pko123.com'
@@ -42892,7 +42887,6 @@ payload:
   - '+.puyurumen.com'
   - '+.puzeyf.com'
   - '+.pv001.net'
-  - '+.pv265.com'
   - '+.pv4b.com'
   - '+.pvc123.com'
   - '+.pvhgws7.com'
@@ -43014,7 +43008,6 @@ payload:
   - '+.qbxz.com'
   - '+.qc-dds.net'
   - '+.qc-hr.com'
-  - '+.qc-meta.com'
   - '+.qc178.com'
   - '+.qc188.com'
   - '+.qc6.com'
@@ -44314,6 +44307,7 @@ payload:
   - '+.qumingdashi.com'
   - '+.qumingxing.com'
   - '+.qumitech.com'
+  - '+.qun-net.com'
   - '+.qun.hk'
   - '+.qun100.com'
   - '+.qun7.com'
@@ -44921,6 +44915,7 @@ payload:
   - '+.respondaudio.com'
   - '+.respusher.com'
   - '+.resuly.me'
+  - '+.retailo2o.com'
   - '+.retalltech.com'
   - '+.retey.net'
   - '+.retiehe.com'
@@ -48991,6 +48986,7 @@ payload:
   - '+.stoneu.com'
   - '+.stonexp.com'
   - '+.stor-age.com'
+  - '+.storage-asset.msi.com'
   - '+.storagesemicon.com'
   - '+.store.dji.com'
   - '+.store.nike.com'
@@ -58430,7 +58426,6 @@ payload:
   - '+.xqbxz.com'
   - '+.xqckg.com'
   - '+.xqfunds.com'
-  - '+.xqggz.com'
   - '+.xqipu.com'
   - '+.xqiushu.com'
   - '+.xqjmzc.com'
@@ -58605,7 +58600,6 @@ payload:
   - '+.xuanyouwang.com'
   - '+.xuanyuanhuangdi.org'
   - '+.xuanyusong.com'
-  - '+.xuanzhoubian.com'
   - '+.xuanzhuanmumatuwen.com'
   - '+.xubei.com'
   - '+.xuchuang.com'
@@ -59077,7 +59071,6 @@ payload:
   - '+.xzper.com'
   - '+.xzpoll.com'
   - '+.xzr.kim'
-  - '+.xzrj.cc'
   - '+.xzsec.com'
   - '+.xzsnw.com'
   - '+.xzstatic.com'
@@ -63477,7 +63470,6 @@ payload:
   - '+.ziboga.com'
   - '+.zicaitou.com'
   - '+.zichabaogao.com'
-  - '+.zichanzhihuan.com'
   - '+.zichenit.com'
   - '+.zidan.chat'
   - '+.zidanduanxin.com'
@@ -64479,7 +64471,6 @@ payload:
   - '+.zxip.com'
   - '+.zxjg66.com'
   - '+.zxjsq.net'
-  - '+.zxlearning.com'
   - '+.zxlib.com'
   - '+.zxlmx.com'
   - '+.zxmall.com'
