--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2229,6 +2229,7 @@ payload:
   - '+.25838yn.com'
   - '+.25847.com'
   - '+.25863.com'
+  - '+.2588qq.com'
   - '+.25892.com'
   - '+.258ch.com'
   - '+.258fuwu.com'
@@ -3320,7 +3321,6 @@ payload:
   - '+.40fenzhong.com'
   - '+.40manhua.com'
   - '+.40mdd.com'
-  - '+.40ya.com'
   - '+.41188.com'
   - '+.411au.com'
   - '+.4124.com'
@@ -4665,6 +4665,7 @@ payload:
   - '+.5858.com'
   - '+.58611.net'
   - '+.5866.com'
+  - '+.587343.com'
   - '+.587tz079.cc'
   - '+.5884.com'
   - '+.5888.tv'
@@ -7890,7 +7891,6 @@ payload:
   - '+.aiwanba.net'
   - '+.aiwanpai.com'
   - '+.aiwansc.com'
-  - '+.aiwawa520.com'
   - '+.aiwebsec.com'
   - '+.aiwei365.net'
   - '+.aiweibang.com'
@@ -12052,7 +12052,6 @@ payload:
   - '+.c5game.com'
   - '+.c6c.com'
   - '+.c6n708.ren'
-  - '+.c73160.com'
   - '+.c75uw72.com'
   - '+.c77c.com'
   - '+.c7c8.com'
@@ -13976,6 +13975,7 @@ payload:
   - '+.chinahazelnut.com'
   - '+.chinahightech.com'
   - '+.chinahighway.com'
+  - '+.chinahiyou.com'
   - '+.chinahkidc.net'
   - '+.chinahlwyy.com'
   - '+.chinahnjs.com'
@@ -14817,6 +14817,7 @@ payload:
   - '+.cjienc.com'
   - '+.cjiit.com'
   - '+.cjjd04.com'
+  - '+.cjjd06.com'
   - '+.cjjd07.com'
   - '+.cjjd08.com'
   - '+.cjjhb.com'
@@ -15497,7 +15498,6 @@ payload:
   - '+.cnndns.com'
   - '+.cnnerv.com'
   - '+.cnnetsec.com'
-  - '+.cnnewss.com'
   - '+.cnnfootballclub.com'
   - '+.cnnmol.com'
   - '+.cnnorip.org'
@@ -16039,6 +16039,7 @@ payload:
   - '+.couplefish.com'
   - '+.coupon996.com'
   - '+.coursegraph.com'
+  - '+.cousz-gd.com'
   - '+.covcec.com'
   - '+.coventrynv.com'
   - '+.coverweb.cc'
@@ -16175,6 +16176,7 @@ payload:
   - '+.cqhydraulic.com'
   - '+.cqhyky.com'
   - '+.cqindex.com'
+  - '+.cqinstinct.com'
   - '+.cqivip.com'
   - '+.cqjbrc.com'
   - '+.cqjet.com'
@@ -18002,6 +18004,7 @@ payload:
   - '+.diandao.org'
   - '+.diandaxia.com'
   - '+.diandian.com'
+  - '+.diandiannuo.com'
   - '+.diandianshu.com'
   - '+.diandianwaimai.com'
   - '+.diandianys.com'
@@ -18540,6 +18543,7 @@ payload:
   - '+.dns12345.com'
   - '+.dns200.net'
   - '+.dns2008.com'
+  - '+.dns2023.com'
   - '+.dns383.com'
   - '+.dns567.com'
   - '+.dns6132.com'
@@ -19533,6 +19537,7 @@ payload:
   - '+.dzwww.net'
   - '+.dzxwnews.com'
   - '+.dzxxzy.com'
+  - '+.dzy.link'
   - '+.dzyqc.com'
   - '+.dzyqh.com'
   - '+.dzyule.com'
@@ -22050,6 +22055,7 @@ payload:
   - '+.fookyik.com'
   - '+.fooleap.org'
   - '+.foooooot.com'
+  - '+.footcdn.com'
   - '+.fooww.com'
   - '+.for-compass.com'
   - '+.for-she.com'
@@ -22615,7 +22621,6 @@ payload:
   - '+.g1c5.com'
   - '+.g1d.net'
   - '+.g1f5.com'
-  - '+.g1yx.com'
   - '+.g2.link'
   - '+.g207.com'
   - '+.g2g1.com'
@@ -22650,6 +22655,7 @@ payload:
   - '+.gaclib.net'
   - '+.gacmotor.com'
   - '+.gacsofinco.com'
+  - '+.gadscc.xyz'
   - '+.gaeadata.com'
   - '+.gaeamobile.net'
   - '+.gafata.com'
@@ -23081,6 +23087,7 @@ payload:
   - '+.gdwca.com'
   - '+.gdwlgp.com'
   - '+.gdwlife.com'
+  - '+.gdxinya.com'
   - '+.gdxxb.com'
   - '+.gdyjs.com'
   - '+.gdysdz.com'
@@ -23228,6 +23235,7 @@ payload:
   - '+.gesep.com'
   - '+.geshui.com'
   - '+.geshui100.com'
+  - '+.geshui99.com'
   - '+.geshuiw.com'
   - '+.gesuo.com'
   - '+.get.vip'
@@ -29397,9 +29405,11 @@ payload:
   - '+.img16888.com'
   - '+.img4399.com'
   - '+.img898.com'
+  - '+.imgads.xyz'
   - '+.imgcdc.com'
   - '+.imgcdn2.com'
   - '+.imgchr.com'
+  - '+.imgds.xyz'
   - '+.imgeek.org'
   - '+.imgets.com'
   - '+.imgii.com'
@@ -36975,6 +36985,7 @@ payload:
   - '+.m937.com'
   - '+.ma-china.com'
   - '+.ma3office.com'
+  - '+.ma3you.com'
   - '+.maa.plus'
   - '+.mabangerp.com'
   - '+.mabibook.com'
@@ -37459,7 +37470,6 @@ payload:
   - '+.maxreader.la'
   - '+.maxreader.net'
   - '+.maxscend.com'
-  - '+.maxstv.com'
   - '+.maxthon.com'
   - '+.maxthonimg.com'
   - '+.maxuscloud.com'
@@ -38154,7 +38164,6 @@ payload:
   - '+.midust.com'
   - '+.midway.run'
   - '+.midwayjs.org'
-  - '+.midymidy.com'
   - '+.miecod.com'
   - '+.miejw.com'
   - '+.miemie.la'
@@ -39008,6 +39017,7 @@ payload:
   - '+.mrdede.com'
   - '+.mrentea.com'
   - '+.mrevisa.com'
+  - '+.mrflay.com'
   - '+.mrhallacg.com'
   - '+.mrjiang.com'
   - '+.mrjjxw.com'
@@ -40838,7 +40848,6 @@ payload:
   - '+.offerstrack.net'
   - '+.office-cn.net'
   - '+.office-peixun.com'
-  - '+.office26.com'
   - '+.officecdn.microsoft.com'
   - '+.officectrl.com'
   - '+.officeedit.com'
@@ -42024,6 +42033,7 @@ payload:
   - '+.phonegap.me'
   - '+.phonegap100.com'
   - '+.phonekr.com'
+  - '+.phonelinksoft.com'
   - '+.phopic.com'
   - '+.photo0086.com'
   - '+.photo3050.com'
@@ -42992,7 +43002,6 @@ payload:
   - '+.qbao.com'
   - '+.qbaoting.com'
   - '+.qbb6.com'
-  - '+.qbdcc.com'
   - '+.qbdgame.com'
   - '+.qbeenslee.com'
   - '+.qbitai.com'
@@ -44244,12 +44253,14 @@ payload:
   - '+.queniubg.com'
   - '+.queniucf.com'
   - '+.queniuck.com'
+  - '+.queniudns.com'
   - '+.queniufm.com'
   - '+.queniuhy.com'
   - '+.queniukr.com'
   - '+.queniuso.com'
   - '+.queniusy.com'
   - '+.queniuuf.com'
+  - '+.queniuwx.com'
   - '+.queqiaoba.com'
   - '+.querylist.cc'
   - '+.queshao.com'
@@ -46215,7 +46226,6 @@ payload:
   - '+.seeyouyima.com'
   - '+.seezy.com'
   - '+.sefonsoft.com'
-  - '+.sefyc.com'
   - '+.segapi.com'
   - '+.segmentfault.com'
   - '+.segmentfault.net'
@@ -52232,7 +52242,6 @@ payload:
   - '+.twd2.net'
   - '+.twdm.net'
   - '+.tweakcube.com'
-  - '+.twfeq.com'
   - '+.twguozao.com'
   - '+.twh5.com'
   - '+.twinkleunion.com'
@@ -53585,7 +53594,6 @@ payload:
   - '+.vmoiver.com'
   - '+.vmonkey.mobi'
   - '+.vmovier.cc'
-  - '+.vmovier.com'
   - '+.vmoviercdn.com'
   - '+.vmsky.com'
   - '+.vmvps.com'
@@ -55553,6 +55561,7 @@ payload:
   - '+.wkandian.com'
   - '+.wkanx.com'
   - '+.wkbins.com'
+  - '+.wkbrowser.com'
   - '+.wkcmall.com'
   - '+.wkderp.com'
   - '+.wkdty.com'
@@ -56056,7 +56065,6 @@ payload:
   - '+.wstong.com'
   - '+.wstx.com'
   - '+.wsurl.cc'
-  - '+.wsview.com'
   - '+.wswebcdn.com'
   - '+.wswebcdn.info'
   - '+.wswebcdn.org'
@@ -56196,6 +56204,7 @@ payload:
   - '+.wukonglicai.com'
   - '+.wukongphp.com'
   - '+.wukongrom.com'
+  - '+.wukongsearch.com'
   - '+.wukongshuo.com'
   - '+.wukongtv.com'
   - '+.wukongwenda.com'
@@ -58351,7 +58360,6 @@ payload:
   - '+.xninja.org'
   - '+.xnjcw.com'
   - '+.xnjjob.com'
-  - '+.xnjz.net'
   - '+.xnlkj.com'
   - '+.xnnpc.com'
   - '+.xnongren.com'
@@ -60575,6 +60583,7 @@ payload:
   - '+.yonyouscf.com'
   - '+.yonyouup.com'
   - '+.yoo-hn.com'
+  - '+.yoo616.com'
   - '+.yoodb.com'
   - '+.yooek.com'
   - '+.yooerjia.com'
@@ -61718,6 +61727,7 @@ payload:
   - '+.ywxue.com'
   - '+.ywxzz.com'
   - '+.ywyanxing.com'
+  - '+.ywyishi.com'
   - '+.yx-g.com'
   - '+.yx-life.com'
   - '+.yx-s.com'
@@ -64655,7 +64665,6 @@ payload:
   - '+.zzstep.com'
   - '+.zzt9.com'
   - '+.zztline.com'
-  - '+.zztongyun.com'
   - '+.zztxkj.com'
   - '+.zztyscl.com'
   - '+.zzvips.com'
